--- a/abilities_l_english.properties
+++ b/abilities_l_english.properties
@@ -1,4 +1,4 @@
-ABILITY_TOOLTIP_NAME코0=$NAME|H$
+﻿ABILITY_TOOLTIP_NAME코0=$NAME|H$
 ABILITY_TOOLTIP_NAME_CANCEL코0=§RCancel: $NAME|H$§!
 ABILITY_TOOLTIP_COST코0=Command Power Cost: $VALUE|H$
 ABILITY_TOOLTIP_DETAILED_COST코0=    - Base cost: $VALUE|H2$ (each for $UNITS|H0$ battalions)
@@ -10,6 +10,8 @@ ABILITY_TOOLTIP_IS_IN_COOLDOWN코0=§RAbility is in cooldown.§!
 ABILITY_LEADER_CANNOT_USE_ABILITIES코1=§RUnit Leader sick or wounded and cannot use abilities.§!
 ABILITY_TOOLTIP_DURATION코0=Duration: $VALUE|H$
 ABILITY_TOOLTIP_COOLDOWN코0=Cooldown: $VALUE|H$
+ABILITY_TOOLTIP_ALREADY_ACTIVE_GROUP코0=§RThis Ability is already active at the Army Group level.§!
+ABILITY_TOOLTIP_ALREADY_ACTIVE_CHILD_GROUPS코0=§RThis Ability is already active for all child groups.§!
 ALLOCATED_CP_ENTRY코0=$NAME$ ($DURATION$)
 ABILITY_DUR_HOURS코0=$num|H$ hours
 ABILITY_DUR_DAYS코0=$num|H$ days
@@ -40,3 +42,4 @@ ABILITY_REQUISITION_WINTER_GEAR_DESC코1=Winter gear will provide a bonus to col
 ABILITY_ON_ADD코0=On Execute:
 ABILITY_ON_HOURLY코0=On Each Hour:
 ABILITY_ON_DAILY코0=On Each Day:
+
