--- a/achievements_l_english.properties
+++ b/achievements_l_english.properties
@@ -1,4 +1,4 @@
-achievement_the_dragon_swallowed_the_sun코0=Annexed Japan
+﻿achievement_the_dragon_swallowed_the_sun코0=Annexed Japan
 achievement_sunrise_invasion_conquered_mexico_first코0=Annexed Mexico before taking any territory in Europe
 achievement_tojo_shot_first코0=Dropped a nuclear bomb on a core state of the US
 achievement_romance_of_the_three_kingdoms_GXC코0=Integrated the Guanxi Clique through making them a puppet
@@ -16,3 +16,6 @@ achievement_team_america코0=Dropped a nuclear bomb on Paris.
 HOL_lost_starting_state코0=The Netherlands lost one of its starting states.
 achievements_pride_and_extreme_prejudice코1=Sank the British Pride of the Fleet.
 do_you_mined_tt코1=More than §Y999§! of our mines laid on the coastline.
+assuming_direct_control_achievement_flag코0=Assumed faction leadership from §Y[ENG.GetName]§!, §Y[GER.GetName]§!, or §Y[SOV.GetName]§!.\n
+USA_civil_war_fired_democrats코0=The Boston Rebellion has begun.\n
+putting_the_raid_on_the_medway_to_shame_tt코0=Any country:\nOriginal country is [ENG.GetName]\nAt most §Y0 Capital Ship§! ships
