--- a/air_l_english.properties
+++ b/air_l_english.properties
@@ -1,4 +1,4 @@
-AIR_STRATEGIC_OUR_TEXT코1=Our
+﻿AIR_STRATEGIC_OUR_TEXT코1=Our
 AIR_STRATEGIC_ENEMY_TEXT코1=Enemy
 AIRWING_MISSION_IDLE코0=Standing by
 AIRWING_MISSION_CARRIER_BOUND코0=On a carrier mission
@@ -98,7 +98,8 @@ AIRBASE_CAPACITY_COUNTS_DESCRIPTION코0=We have $OURS|H$ Airplanes stationed her
 AIRBASE_AIRPLANE_COUNT코0=$OURS$ ($TOTAL$)
 AIRBASE_CAPACITY_RIGHT코0=/ $MAX$
 AIRBASE_SUPPLY_PENALTY_DETAIL코0=Air base has insufficient supply: $PERC|%0=+$
-AIRWING_RECENTLY_ASSIGNED_NEW_REGION코0=Recently arrived in region: $PERC|1%+=R$ ($REGAIN|1%+=$/h)
+AIRWING_RECENTLY_ASSIGNED_NEW_REGION코0=Recently arrived in region: $PERC|1%-=$ ($REGAIN|1%+=$/h)
+AIRWING_RECENTLY_ASSIGNED_WARNING코0=§RYou will only regain efficiency whilst your airwings are assigned to an active mission.§!
 AIR_DETECTION_IN_REGION_DETAILS코1=Aircraft detection Total: $TOT|%G$\n  From controlled territory: $BASE|%G$\n  Radars in range: $RAD|%G$\n  Active airplanes in region: $AIR|%G$\n\n Detection total reduced by a factor $DETECT_RED|R$\n  Night: $NIGHT|%R$\n  Bad weather: $WEA|%R$
 AIRBASE_DISTANCE_PENALTY_DETAIL코0=Lacking range to completely cover area: $PERC|%1=+$
 AIRBASE_LACKS_FUEL_PENALTY_DETAIL코0=Lacking fuel: §Rx$PERC|%1-$§!
