--- a/army_l_english.properties
+++ b/army_l_english.properties
@@ -1,4 +1,4 @@
-ARMY_TEMPLATE_INFO코0=$NAME$: $COUNT|H$
+﻿ARMY_TEMPLATE_INFO코0=$NAME$: $COUNT|H$
 ARMY_ARMY_LABEL코0=Division Overview
 ARMY_NAVY_LABEL코0=Navy Overview
 ARMY_AIR_LABEL코0=Air Forces Overview
@@ -92,6 +92,7 @@ MILITA_ARMY_NAME코0=$TEMPLATE$ Milita $NUMBER$
 SWITCH_STRATEGIC_REDEPLOYMENT_MODE_OFF코0=Strategic redeployment order is §ROFF§!
 SWITCH_STRATEGIC_REDEPLOYMENT_MODE_ON코0=Strategic redeployment order is §GON§!
 SWITCH_STRATEGIC_REDEPLOYMENT_MODE_DETAILED코0=Strategic redeployment uses your §YInfrastructure§! to move troops faster.\nWhile active, units will suffer $ORG|R%$ penalty to Organization.\nThe unit's speed is set to $BASE|1Y$ km/h plus up to $INFR|=1G$ km/h extra, depending on the state's §YInfrastructure§!.
+SWITCH_STRATEGIC_REDEPLOYMENT_MODE_DETAILED_2코0=Use £ctrl  + £b  toggle strategic redeployment for move orders of selected armies.
 FORCES_COMPARISON_HEADER코0=§HForces comparison:§! 
 FORCES_COMPARISON_EQUAL코0=roughly §Yequal§!\n
 FORCES_COMPARISON_STRONGER코0=we are §Gstronger§!\n
