--- a/autonomy_l_english.properties
+++ b/autonomy_l_english.properties
@@ -1,4 +1,4 @@
-autonomy_dominion코0=Dominion
+﻿autonomy_dominion코0=Dominion
 autonomy_supervised_state코0=Supervised State
 autonomy_colony코0=Colony
 autonomy_puppet코0=Puppet
@@ -34,7 +34,7 @@ LL_TO_PUPPET_FREEDOM_EFFECT코0=Overlord lend leasing to subject
 MONTHLY_LL_FREEDOM_TO_PUPPET코0=$FLAG$ $VALUE|-2$
 MONTHLY_LL_FREEDOM_TO_MASTER코0=$VALUE|+2$
 MONTHLY_LL_FREEDOM_VALUE_DESC코0=Monthly impact on autonomy in case of full delivery
-MONTHLY_LL_FREEDOM_DESC코0=Monthly after full delivery $COUNTRY|H$ gets £autonomy_texticon $VALUE|H+=2$ 
+MONTHLY_LL_FREEDOM_DESC코0=Monthly after full delivery $COUNTRY|H$ gets £autonomy_texticon $VALUE|+=2$ 
 MONTHLY_REQUEST_LL_TO_MASTER코0=§RRequesting lend lease from puppet can give them more autonomy§!
 MONTHLY_REQUEST_LL_TO_PUPPET코0=§RRequesting lend lease from master might lose autonomy§!
 EXPORT_FREEDOM_EFFECT코0=Subject exporting to overlord
@@ -60,3 +60,4 @@ CONSTRUCTION_MASTER_BUILDING_REDUCE_LEVELS코0=We are allowed to reduce this con
 CONSTRUCTION_MASTER_BUILDING_CANT_REDUCE코0=§RWe are not allowed to reduce the level or cancel this construction.§!
 CONSTRUCTION_INFO_MASTER코0=This construction is built on the $WHO|H$ territory. If we don't use all factories, they can contribute using theirs.
 CONSTRUCTION_INFO_SUBJECT코0=This construction is built for us by the $WHO|H$. If they don't use all factories, we can contribute using ours.
+
