--- a/buildings_l_english.properties
+++ b/buildings_l_english.properties
@@ -1,4 +1,4 @@
-infrastructure코0=Infrastructure
+﻿infrastructure코0=Infrastructure
 infrastructure_plural코0=Infrastructure
 infrastructure_desc코0=This building provides the state with improvement of infrastructure. It increases your supply power in strategic regions and increases your divisions' speed.
 arms_factory코0=Military Factory
@@ -27,6 +27,7 @@ anti_air_building_plural코0=Anti-Air
 anti_air_building_desc코0=This building provides the state with protection from enemy bombers and ability to fire at attacking aircraft.
 synthetic_refinery코0=Synthetic Refinery
 synthetic_refinery_plural코0=Synthetic Refineries
+#synthetic_refinery_desc:0 "This building provides the state with +1 £resources_strip|3 and +2 £resources_strip|1."
 synthetic_refinery_desc코0=This building provides the state with
 synthetic_refinery_amount코0=$VALUE|Y0=$
 synthetic_refinery_resource코0=£resources_strip|$FRAME$
@@ -73,7 +74,7 @@ INSERT_CONSTRUCTION코0=§GCtrl+Click§! to build and place at the beginning of 
 BUILDING_CURRENT_MAX_LEVEL코0=Max level for $BUILDING|Y$: $MAXLEVEL|Y$
 BUILDING_CURRENT_MAX_LEVEL_SHARED_SLOTS코0=Max $BUILDING|Y$ in a State: $MAXLEVEL|Y$
 BUILDING_LEVEL_HEALTH코0=Level health: $VALUE|%2Y$
-AIR_DEFENSE_IN_STATE코0=\n§HTotal bombing damage reduction:§! $TOT|%G$\nAnti-Air: $AA|-%$\n
+AIR_DEFENSE_IN_STATE코1=\n§HIndustry bombing damage reduction:§! $TOT_INDUSTRY|%G$\n§HOther bombing damage reduction:§! $TOT|%G$\nAnti-Air: $AA|-%$\n
 RADAR_ONMAP_TOOLTIP코0=§HRadar station§! level: $LVL|G$/$TOT|H$\nBelongs to: $WHO|H$
 RADAR_ONMAP_DAMAGED_TOOLTIP코0=§HRadar station§! level: $LVL|R$/$TOT|H$\nBelongs to: $WHO|H$
 RADAR_ONMAP_TOOLTIP_COVERAGE코0=\n§HRegions coverage:§!
