--- a/countries_cosmetic_l_english.properties
+++ b/countries_cosmetic_l_english.properties
@@ -1,4 +1,4 @@
-INS_HOL_democratic코0=Dutch East Indies
+﻿INS_HOL_democratic코0=Dutch East Indies
 INS_HOL_democratic_DEF코0=the Dutch East Indies
 INS_subject코0=$OVERLORDADJ$ East Indies
 INS_subject_DEF코0=the $OVERLORDADJ$ East Indies
@@ -705,3 +705,9 @@ ENG_england_communism_DEF코0=the Commune of Anglia
 ENG_england_communism_ADJ코0=Anglian
 ENG_communist_civil_war_communism코1=True Union of Britain
 ENG_communist_civil_war_communism_def코1=the True Union of Britain
+SOV_russia_communism코0=Russian Soviet Socialist Republic
+SOV_russia_communism_DEF코0=the Russian Soviet Socialist Republic
+SOV_russia_communism_ADJ코0=Russian
+HOL_benelux_unified_democratic코0=Benelux Federation
+HOL_benelux_unified_democratic_DEF코0=the Benelux Federation
+HOL_benelux_unified_democratic_ADJ코0=Benelux
