--- a/countries_l_english.properties
+++ b/countries_l_english.properties
@@ -1,4 +1,4 @@
-GER_fascism코0=German Reich
+﻿GER_fascism코0=German Reich
 GER_fascism_DEF코0=the German Reich
 GER_democratic코0=German Republic
 GER_democratic_DEF코0=the German Republic
@@ -1403,15 +1403,15 @@ BRM_neutrality_ADJ코1=Myanma
 BRM_communism_ADJ코1=Burmese
 CRC_fascism코1=Empire of the Dutch Antilles
 CRC_fascism_DEF코1=the Empire of the Dutch Antilles
-CRC_democratic코1=ABC Republic
-CRC_democratic_DEF코1=the ABC Republic
-CRC_neutrality코2=Netherlands Antilles
-CRC_neutrality_DEF코2=the Netherlands Antilles
+CRC_democratic코2=Netherlands Antilles
+CRC_democratic_DEF코2=the Netherlands Antilles
+CRC_neutrality코3=ABC Republic
+CRC_neutrality_DEF코3=the ABC Republic
 CRC_communism코1=Curative People's Republic
 CRC_communism_DEF코1=the Curative People's Republic
 CRC_fascism_ADJ코1=Dutch Antillean
-CRC_democratic_ADJ코1=ABC Republican
-CRC_neutrality_ADJ코2=Dutch Antillean
+CRC_democratic_ADJ코2=Dutch Antillean
+CRC_neutrality_ADJ코3=ABC Republican
 CRC_communism_ADJ코1=Curaçaoan
 GDL_fascism코1=Karukera Empire
 GDL_fascism_DEF코1=the Karukera Empire
@@ -1665,15 +1665,15 @@ CYP_fascism_ADJ코2=Cypriot
 CYP_democratic_ADJ코0=Cypriot
 CYP_neutrality_ADJ코0=Cypriot
 CYP_communism_ADJ코0=Cypriot
-MLT_fascism코1=Sovereign Military Order of Malta
-MLT_fascism_DEF코1=the Sovereign Military Order of Malta
+MLT_fascism코2=Tenth Crusade
+MLT_fascism_DEF코2=the Tenth Crusade
 MLT_democratic코0=Malta
 MLT_democratic_DEF코0=Malta
-MLT_neutrality코1=Order of St. John
-MLT_neutrality_DEF코1=the Order of St. John
+MLT_neutrality코2=Sovereign Military Order of Malta
+MLT_neutrality_DEF코2=the Sovereign Military Order of Malta
 MLT_communism코1=Malta Commune
 MLT_communism_DEF코1=the Malta Commune
-MLT_fascism_ADJ코0=Maltese
+MLT_fascism_ADJ코1=Crusader
 MLT_democratic_ADJ코0=Maltese
 MLT_neutrality_ADJ코1=Hospitaller
 MLT_communism_ADJ코0=Maltese
@@ -2205,3 +2205,4 @@ NIR_fascism_ADJ코1=Ulster
 NIR_democratic_ADJ코0=Northern Irish
 NIR_neutrality_ADJ코1=Ulster
 NIR_communism_ADJ코1=North Irish
+
