--- a/decisions_l_english.properties
+++ b/decisions_l_english.properties
@@ -1,4 +1,4 @@
-DECISIONVIEW_TITLE코0=Events and Decisions
+﻿DECISIONVIEW_TITLE코0=Events and Decisions
 DECISIONSVIEW_EVENT_HEADER코0=Events
 POPUP_NEWS코0=News Popup
 POPUP_EVENTS코0=Event Popup
