--- a/deployment_l_english.properties
+++ b/deployment_l_english.properties
@@ -1,4 +1,4 @@
-DIVISION_QUEUED코0=$N$ Division
+﻿DIVISION_QUEUED코0=$N$ Division
 DIVISIONS_QUEUED코0=$N$ Divisions
 CONVEYOR_EQUIPMENT_NEED코0=Equipment need:
 CONVEYOR_MANPOWER_NEED코0=Manpower need: $AMOUNT|H$
