--- a/designer_l_english.properties
+++ b/designer_l_english.properties
@@ -1,4 +1,4 @@
-DESIGNER_LOCKED코0=§RLocked§!
+﻿DESIGNER_LOCKED코0=§RLocked§!
 DESIGNER_ADD코0=§GClick to add§!
 DESIGNER_CHANGE코0=§GClick to change§!
 DESIGNER_DUPLICATE_TO_MODIFY코0=§RDuplicate template to modify§!
@@ -56,9 +56,12 @@ PRODUCTION_RESOURCE_DESC코0=Resources that are needed for one factory to produc
 DIVISION_PRODUCTION_RESOURCE_DESC코0=Resources that will be used for equipment production for this template.
 DIVISION_PRODUCTION_COST_DESC코0=This is the §YMinimal§! and §YMaximal§! production cost for the current division.
 DIVISION_PRODUCTION_COST_SINGLE_VAL코0=Estimated Production Cost: £production_cost£$VALUE|0$
-DIVISION_PRODUCTION_COST_NAVAL코0=Production Cost: £production_cost£$VALUE|0$
-DIVISION_PRODUCTION_COST_NAVAL_MAX코0=Production Cost: £production_cost£$VALUE|0$/$MAX|0$
-DIVISION_PRODUCTION_COST_VAL코0=Estimated Production Cost: £production_cost£$MINVALUE|0$ to £production_cost£$MAXVALUE|0$
+DIVISION_REFIT_COST_NAVAL코0=Refit Cost: £navprod_cost£ $VALUE|0$
+DESIGNER_REFIT_COST_FROM_ORIGINAL코0=Refit Cost from the original design
+DESIGNER_REFIT_COST_FROM_PARENT코0=Refit Cost from the parent design $PARENT_NAME|H$
+DIVISION_PRODUCTION_COST_NAVAL코0=Production Cost: £navprod_cost£ $VALUE|0$
+DIVISION_PRODUCTION_COST_NAVAL_MAX코0=Production Cost: £navprod_cost£ $VALUE|0$/$MAX|0$
+DIVISION_PRODUCTION_COST_VAL코0=Estimated Production Cost: £production_cost£ $MINVALUE|0$ to £production_cost£ $MAXVALUE|0$
 DIVISION_MODIFICATION_HEADER코1=This template change will impact $AMOUNT|H$ divisions.
 DIVISION_MODIFICATION_NEED_NOT_FILLED코1=\t- $AMOUNT|H0$ additional $EQUIPMENT|H$ needed to fill divisions ( §R$STOCK_AMOUNT|H0^$ available§! )
 DIVISION_MODIFICATION_NEED_FILLED코1=\t- $AMOUNT|H0$ additional $EQUIPMENT|H$ needed to fill divisions ( $STOCK_AMOUNT|H0^$ available )
@@ -127,7 +130,7 @@ EQUIPMENT_DESIGNER_LG_ATTACK_ICON_TOOLTIP코0=Light Gun Attack
 EQUIPMENT_DESIGNER_HG_ATTACK_ICON_TOOLTIP코0=Heavy Gun Attack
 EQUIPMENT_DESIGNER_ANTI_AIR_ATTACK_ICON_TOOLTIP코0=Anti-Air Attack
 EQUIPMENT_DESIGNER_ANTI_SUB_ATTACK_ICON_TOOLTIP코0=Anti-Sub Attack
-REQUIRED_MODULE_EMPTY코0=§RDesign lacks one or more required modules§!
+REQUIRED_MODULE_EMPTY코0=§RDesign lacks one or more required modules:§!
 EQUIPMENT_MODULE_LIMIT_NOT_EQUAL코0=§RDesign does not have required count ($REQ_COUNT|0$) of $TITLE|H$.§!
 EQUIPMENT_MODULE_LIMIT_MAX_EXCEEDED코0=§RDesign is over maximum count ($MAX|0$) of $TITLE|H$.§!
 EQUIPMENT_MODULE_LIMIT_MIN_EXCEEDED코0=§RDesign is under minimum count ($MIN|0$) of $TITLE|H$.§!
@@ -142,6 +145,8 @@ EQUIPMENT_DESIGNER_AUTO_BUTTON_DESC코0=Automatically generate a complete design
 EQUIPMENT_DESIGNER_AUTO_BUTTON_DESC_DELAYED코0=You will be able to review and modify the generated design before approving it and paying any experience cost.
 EQUIPMENT_DESIGNER_AUTO_BUTTON_ACTION_TO_ADJUST코0=§GClick§! to §Hadjust§! the current design.
 EQUIPMENT_DESIGNER_AUTO_BUTTON_ACTION_TO_REPLACE코0=§GShift+Click§! to §Hreplace§! the current design.
+# name list themes
+# name list themes -- updated to include country-specific and other new list names
 NAME_THEME_RIVERS코0=Rivers
 NAME_THEME_FISH코0=Fish
 NAME_THEME_ANIMALS코0=Animals
@@ -161,18 +166,22 @@ NAME_THEME_GREEK_MYTHOLOGY코0=Greek Mythology
 NAME_THEME_NORDIC_MYTHOLOGY코0=Nordic Mythology
 NAME_THEME_SLAVIC_MYTHOLOGY코0=Slavic Mythology
 NAME_THEME_GERMANIC_MYTHOLOGY코0=Germanic Mythology
+NAME_THEME_AZTECS코0=Aztec Mythology
 NAME_THEME_IMPERIAL_DD코0=Imperial Destroyers
 NAME_THEME_IMPERIAL_CL코0=Imperial Light Cruisers
 NAME_THEME_IMPERIAL_CA코0=Imperial Heavy Cruisers
 NAME_THEME_IMPERIAL_BC코0=Imperial Battlecruisers
 NAME_THEME_IMPERIAL_BB코0=Imperial Battleships
 NAME_THEME_IMPERIAL_CARRIERS코0=Imperial Carriers
+
 NAME_THEME_HISTORICAL_DE코0=Historical Destroyer Escorts
 NAME_THEME_HISTORICAL_TB코0=Historical Torpedo Boats
 NAME_THEME_HISTORICAL_CVL코0=Historical Light/Escort Carriers
 NAME_THEME_HISTORICAL_CLAA코0=Historical Anti-Aircraft Cruisers
 NAME_THEME_HISTORICAL_MINELAYERS코0=Historical Minelayers
 NAME_THEME_LEADERS코0=Famous Leaders
+NAME_THEME_MARSHALS코0=Marshals
+NAME_THEME_PRESIDENTS코0=Presidents
 NAME_THEME_MYTHOLOGY코0=Mythology
 NAME_THEME_REGIONS코0=Regions
 NAME_THEME_PREFECTURES코0=Provinces & Prefectures
@@ -199,3 +208,7 @@ NAME_THEME_CONFEDERATE_SUBMARINES코0=Confederate Submarines
 NAME_THEME_HISTORICAL_SUBS_OCLASS코0=Historical O-Class Subs
 NAME_THEME_HISTORICAL_SUBS_KCLASS코0=Historical K-Class Subs
 NAVAL_ROLE_SELECT_DESC코1=Here you can classify your designs to organize them and allow for more specific reinforcement settings in your task force compositions.
+
+
+
+
