--- a/diplomacy_l_english.properties
+++ b/diplomacy_l_english.properties
@@ -1,4 +1,4 @@
-DIPLO_POSITIVE코0=Positive: $VAL|G$
+﻿DIPLO_POSITIVE코0=Positive: $VAL|G$
 DIPLO_NEGATIVE코0=Negative: $VAL|R$
 GOOD_BAD_RATIO코0=We need at least $THRESHOLD|Y$ more §Gpositive§! than §Rnegative§! reasons for an acceptance. We currently have $RATIO|Y$.
 DIPLOMACY_STAGE_COUP_ALREADY_IDEOLOGY코0=They are already $IDE$, so it is not needed to coup them.
@@ -107,6 +107,8 @@ DIPLOMACY_MESSAGE_REPLYED_INCOMING_LEND_LEASE_DESC_NOTHING코0=§RThey have deci
 DIPLOMACY_MESSAGE_REPLYED_INCOMING_LEND_LEASE_DESC_SOMETHING코0=The Lend-Lease is now:
 DIPLOMACY_MESSAGE_REPLYED_INCOMING_LEND_LEASE_DESC_TITLE_MONTHLY코0=   Monthly:
 DIPLOMACY_MESSAGE_REPLYED_INCOMING_LEND_LEASE_DESC_TITLE_PERCENTAGE코0=   Percentage per month:
+DIPLOMACY_MESSAGE_REPLYED_INCOMING_LEND_LEASE_DESC_TITLE_DAILY코0=   Daily:
+DIPLOMACY_MESSAGE_REPLYED_INCOMING_LEND_LEASE_DESC_TITLE_PERCENTAGE_DAY코0=   Percentage per day:
 DIPLOMACY_MESSAGE_REPLYED_INCOMING_LEND_LEASE_DESC_TITLE_ONCE코0=   Once:
 DIPLOMACY_MESSAGE_REPLYED_INCOMING_LEND_LEASE_DESC_DESC_UNITS코0=      $VALUE|0H$ of $NAME|H$
 DIPLOMACY_MESSAGE_REPLYED_INCOMING_LEND_LEASE_DESC_DESC_PERCENTAGE코0=      $VALUE|0%H$ of $NAME|H$
@@ -285,7 +287,8 @@ DIPLOMACY_LEND_LEASE_REASON_PUPPET코0=We can always lend-lease equipment to our
 DIPLOMACY_LEND_LEASE_REASON_PUPPET_DESC코0=It will lower their autonomy
 DIPLOMACY_LEND_LEASE_SLIDER_PERC코0=$PERC|Y0%$ ($NUM|Y$)
 DIPLOMACY_LEND_LEASE_SLIDER_SET코0=Set
-DIPLOMACY_LEND_LEASE_NUMBER코0=Number
+DIPLOMACY_LEND_LEASE_NUMBER코1=Monthly
+DIPLOMACY_LEND_LEASE_DAILY코0=Daily
 DIPLOMACY_LEND_LEASE_PERCENT코0=Percent
 DIPLOMACY_LEND_LEASE_ONCE코0=Once
 DIPLOMACY_LEND_LEASE_NEXT_SHIPMENT코0=Next shipment:
@@ -300,6 +303,8 @@ DIPLOMACY_LEND_LEASE_RECEIVE코0=We receive:
 DIPLOMACY_LEND_LEASE_CANCEL코0=Cancel
 DIPLOMACY_LEND_LEASE_SEND코0=We send:
 DIPLOMACY_LEND_LEASE_NUMBER_TOOLTIP코0=Select a number of equipment units to send monthly.
+DIPLOMACY_LEND_LEASE_DAILY_TOOLTIP코0=Select a number of units to send daily.
+DIPLOMACY_LEND_LEASE_DAILY_PERCENT_TOOLTIP코0=Select a percentage of daily production to send.
 DIPLOMACY_LEND_LEASE_PERCENT_TOOLTIP코0=Select a percentage of monthly production to send.
 DIPLOMACY_LEND_LEASE_ONCE_TOOLTIP코0=Select a number of equipment units to send once.
 DIPLOMACY_LEND_LEASE_EQUIPMENT_TOOLTIP코0=Producing: $PRODUCING|Y$\nIn Storage: $STORAGE|Y$
@@ -656,17 +661,20 @@ SEND_EXP_WE_NOT_AT_WAR코0=Sending expeditionary forces is an act of aggression.
 SEND_EXP_MUST_BE_IN_SAME_FACTION코0=We must be at same faction to send expeditionary forces.
 DIPLOMACY_REQUEST_EXP_FORCE_TITLE코0=Request Forces
 DIPLOMACY_REQUEST_EXP_FORCE_ACTION_DESC코0=Request control over a number of divisions from a puppet. Since you have such strong influence over their government, they will always accept.
+
 REQUEST_EXP_NOT_AI코0=You can only request expeditionaries from AI controlled countries.
 REQUEST_EXP_MUST_BE_IN_SAME_FACTION코0=They are not in the same faction as you.
 REQUEST_EXP_NOT_SHARING_WAR코0=Sending expeditionary forces is considered an act of war and can't be done by a country that isn't in the war.
 REQUEST_EXP_WE_ARE_NOT_AT_WAR코0=You must be at war to receive expeditionary forces.
 REQUEST_EXP_NOT_A_MASTER코0=As a puppet, they can only send expeditionary forces to their master.
 REQUEST_EXP_NOT_LEADER코0=You are not the faction leader.
+
 REQUEST_EXP_TOO_MANY_EXP_FORCES코1=This request exceeds their expeditionary force limit
 REQUEST_EXP_COUDLNT_FIND_UNITS_SUITABLE코1=They don't think they have enough units suitable for this order
 REQUEST_EXP_COUDLNT_NO_ORDERS_TO_EVALUATE코0=There are no orders in this request to evaluate
 REQUEST_EXP_KILLING_MY_EXPEDITIONARIES코1=They took a lot of casualties under our orders
 REQUEST_EXP_WE_NEED_OUR_FORCES코1=They claim to need their armies elsewhere
+
 REQUEST_EXPEDITIONARY_FORCES_DESC코0=Request control over $COUNT|H$ divisions from $TARGET|H$.
 REQUEST_SLIDER코0=$VAL$
 DIPLOMACY_WARGOAL_ADDED코1=$COUNTRY|UH$ has added a new war goal: 
@@ -1088,8 +1096,8 @@ USA_special_relationship코0=Special Relationship
 unilateral_war코0=Unilateral War
 betrayed_alliance코0=Betrayed Alliance
 DIPLOMACY_DOCKING_RIGHTS_TITLE코0=Ask for docking rights
-DIPLOMACY_DOCKING_RIGHTS_DESC코0=Docking rights allows our ships to dock for supplies at their ports
-DIPLOMACY_DOCKING_RIGHTS_ACTION_DESC코0=Ask to be allowed to dock to their ports for supplies.
+DIPLOMACY_DOCKING_RIGHTS_DESC코1=Docking rights would allow our navy to resupply in their ports.
+DIPLOMACY_DOCKING_RIGHTS_ACTION_DESC코1=Ask to be allowed to resupply our navy in their ports.
 DIPLOMACY_DOCKING_RIGHTS_REQUEST_DESC코1=$COUNTRY|UY$ wants to resupply their ships in our ports.
 DIPLOMACY_REVOKE_DOCKING_RIGHTS_TITLE코0=Cancel our docking rights
 DIPLOMACY_REVOKE_DOCKING_RIGHTS_DESC코0=We will no longer be able to dock in ports of $COUNTRY|Y$?
