--- a/dod_focus_l_english.properties
+++ b/dod_focus_l_english.properties
@@ -1,4 +1,4 @@
-HUN_balanced_budget코0=Balanced Budget
+﻿HUN_balanced_budget코0=Balanced Budget
 HUN_balanced_budget_desc코0=We must make the best with the resources at our disposal. A well-planned and balanced budget is key to our government's success.
 HUN_strengthen_the_monarchists코0=Strengthen the Monarchists
 HUN_strengthen_the_monarchists_desc코0=The first step in returning Hungary to its previous prestige is to strengthen those parties that clamor for a return to a monarchy.
@@ -199,8 +199,8 @@ HUN_submarines코0=Submarines
 HUN_submarines_desc코0=Submarines came close to beating the most powerful navy on the planet in the last war. We can not be taken seriously as a modern navy if we do not posess submarines of our own.
 HUN_carriers코0=Carriers
 HUN_carriers_desc코0=The battleship is a relic of a time long gone. The future of naval warfare is the carrier and the airplane. We will be at the forefront of this development.
-fighter_tt코0=Must have a modern fighter to offer and be at peace with {Root.GetName}
-bomber_tt코0=Must have a modern bomber to offer and be at peace with {Root.GetName}
+fighter_tt코0=Must have a modern fighter to offer and be at peace with [Root.GetName]
+bomber_tt코0=Must have a modern bomber to offer and be at peace with [Root.GetName]
 ROM_preserve_greater_romania코0=Preserve Greater Romania
 ROM_preserve_greater_romania_desc코0=We have at last managed to unite all Romanian speakers in our country. Now, we must ensure that our children may inherit our legacy of a Romania for all Romanians.
 ROM_a_deal_with_the_devil코0=A Deal with the Devil
@@ -756,3 +756,4 @@ YUG_coastal_defense_desc코1=We cannot hope to contest our adversaries' fleets i
 YUG_expand_the_submarine_fleet코0=Expand the Submarine Fleet
 YUG_expand_the_submarine_fleet_desc코1=Rather than challenge the enemy head-on with our inferior navy, we should focus on submarines to harass the enemy and target their merchant shipping.
 panslavic_workers_congress코0=Pan-Slavic Worker's Congress
+
