--- a/dod_ideas_l_english.properties
+++ b/dod_ideas_l_english.properties
@@ -1,4 +1,4 @@
-HUN_treaty_of_triannon코0=Treaty of Trianon
+﻿HUN_treaty_of_triannon코0=Treaty of Trianon
 HUN_treaty_of_triannon_desc코0=The Treaty of Trianon is, in many ways, similar to the Treaty of Versailles, crippling our military and preventing rearmament. Seeing it altered or abolished must be our premier goal. We can do this by seeking a Rapprochement with the Little Entente, proposing the Bled Agreement, or by renouncing it altogether. The last option will be widely considered as very aggressive and may provoke a strong response.
 HUN_treaty_of_triannon_2코0=Revised Treaty of Trianon
 HUN_treaty_of_triannon_3코0=Bled Agreement
