--- a/factions_l_english.properties
+++ b/factions_l_english.properties
@@ -1,4 +1,4 @@
-FACTION_LEADER코0=Faction leader: §Y$COUNTRY$§!
+﻿FACTION_LEADER코0=Faction leader: §Y$COUNTRY$§!
 FACTION_MEMBER코0=Faction member: §Y$COUNTRY$§!
 FACTION_CREATED_UNDER_MASTER_TITLE코0=Joined Master's Faction
 FACTION_CREATED_UNDER_MASTER_MESSAGE코0=We have joined $FACTION|H$ faction together under our master
