--- a/frontend_l_english.properties
+++ b/frontend_l_english.properties
@@ -1,4 +1,4 @@
-MATCHMAKING_FILTER_NOPASSWORD코0=No password
+﻿MATCHMAKING_FILTER_NOPASSWORD코0=No password
 MATCHMAKING_FILTER_NOTFULL코0=Not Full
 MATCHMAKING_FILTER_HASPLAYERS코0=Has Players
 MATCHMAKING_FILTER_MOD코0=MOD
@@ -166,7 +166,8 @@ FE_CHANGE_SCENARIO_ONLY_SERVER코0=§RMay only be changed by the host§!
 ACHIEVEMENTS_CHEATS코0=No cheats or modified game/save
 ACHIEVEMENTS_DIFFICULTY코0=Regular or higher difficulty
 ACHIEVEMENTS_OK코0=§HCan get Achievements!§!
-ACHIEVEMENTS_NOT_OK코0=§RCan not currently get Achievements.§!
+ACHIEVEMENTS_NOT_OK코1=§RCan not get Achievements.§!
+ACHIEVEMENTS_MOSTLY_NOT_OK코0=§RCan not get most Achievements.§!
 diff_strong_ai_generic코0=Stronger AI
 custom_diff_strong_ger코0=Strengthen Germany
 custom_diff_strong_ita코0=Strengthen Italy
