--- a/goals_l_english.properties
+++ b/goals_l_english.properties
@@ -1,4 +1,4 @@
-rhineland코0=Remilitarize the Rhineland
+﻿rhineland코0=Remilitarize the Rhineland
 rhineland_desc코0=The Rhineland has been demilitarized since the end of the First World War, but this insult shall stand no longer! Germany is a sovereign nation and is free to move troops anywhere within her borders!
 rhineland_short_desc코0=§LMove German forces west of the Rhine in defiance of the Versailles Treaty.§!
 rhineland_1코0=Remilitarize Mosselland
@@ -66,7 +66,7 @@ south_pacific_mandate_SUCCEEDED코0=The South Pacific Mandate has been fortified
 south_pacific_mandate_SUCCEEDED_DESC코0=Our engineers have fortified our islands in the South Pacific Mandate. Any attackers will find our forces difficult to dislodge.
 demand_indochina_focus코0=Demand French Indochina
 demand_indochina_focus_desc코0=After its defeat in Europe, France's hold over its overseas colonies is tenuous at best. Pressure the new French government into granting Japan full access to its bases in Indochina. This region will be useful as a springboard for future campaigns.
-demand_indochina_focus_tt코0=At war with France or France does not own Indochina. \nIs in faction with France.
+demand_indochina_focus_tt코1=France owns Indochina.
 demand_indochina_focus_short_desc코0=§LPressure the new French government into giving up Indochina.§!
 demand_french_indochina_SUCCEEDED코0=The Demands Are Sent
 demand_french_indochina_SUCCEEDED_DESC코0=Our forces are positioned along the borders of French Indochina, making it clear that there will be serious consequences should our proposal be rejected.
@@ -347,4 +347,5 @@ support_republican_spain_short_desc코0=Send equipment to support Republican Spa
 support_nationalist_spain코0=Support Nationalist Spain
 support_nationalist_spain_desc코0=The Spanish Civil War is viewed by many as a domestic version of the global ideological conflicts that define our times. Sending equipment to the Nationalist side, we can take a stand against the anarchists and Reds who would destroy the Spanish nation.
 support_nationalist_spain_short_desc코0=Send equipment to support Nationalist Spain in the Civil War
-may_provoke_hostility코0=§R{This.GetName} and other nations may respond with hostility to this course of action.§!
+may_provoke_hostility코0=§R[This.GetName] and other nations may respond with hostility to this course of action.§!
+
