--- a/ideas_l_english.properties
+++ b/ideas_l_english.properties
@@ -1,4 +1,4 @@
-fascist_influence코0=Fascist Influence
+﻿fascist_influence코0=Fascist Influence
 fascist_influence_desc코0=Fascist pressure has made fascism very popular, and the country is susceptible to align with other fascists.
 communist_influence코0=Communist Influence
 communist_influence_desc코0=Communist pressure has made communism very popular, and the country is susceptible to align with other communist.
@@ -513,13 +513,20 @@ bofors코0=Bofors
 husqvarna코0=Husqvarna Vapenfabriks AB
 kockums코0=Kockums
 landsverk코0=AB Landsverk
+#zbrojovka_brno:0 "Zbrojovka Brno"
+#avia:0 "Avia"
+#letov:0 "LETOV"
 scania코0=Scania-Vabis
+#aero:0 "Aero"
+#praga:0 "Praga"
 CZE_zbrojovka_brno코0=Zbrojovka Brno
 CZE_avia코0=Avia
 CZE_letov코0=LETOV
 CZE_aero코0=Aero
 CZE_praga코0=Praga
+#skoda:0 "Skoda"
 CZE_skoda_artillery코0=Skoda Artillery
+#ckd:0 "CKD"
 CZE_ckd코0=CKD
 CZE_tatra코0=Tatra
 CZE_skoda_armor코0=Skoda Armor
@@ -722,17 +729,24 @@ POL_josef_unrug코0=Józef Unrug
 POL_xawery_czernicki코0=Xawery Czernicki
 POL_zygmunt_buhusz_szysko코0=Zygmunt Bohusz-Szyszko
 POL_stanislav_maczek코0=Stanisław Maczek
+#HUN_generic_fascist_demagogue:0 "Gyula Gömbös de Jakfa"
 HUN_gyula_gombos_de_jakfa코0=Gyula Gömbös de Jákfa
+#HUN_generic_democratic_reformer:0 "József Széll"
 HUN_jozsef_szell코0=József Széll
+#HUN_generic_communist_revolutionary:0 "Lászó Rajk"
 HUN_laszlo_rajk코0=László Rajk
 HUN_kalman_kanya코0=Kálmán Kánya
+#HUN_tihamer_fabinyi:0 "Tihamér Fabinyi"
 HUN_kalman_daranyi코0=Kálmán Darányi
 HUN_zoltan_tildy코0=Zoltán Tildy
 HUN_hugo_sonyi코0=Hugó Sónyi
 HUN_ferenc_szombathelyi코0=Ferenc Szombathelyi
 HUN_bela_rakosi코0=Béla Rákosi
+#HUN_gottfried_von_banfield:0 "Gottfried Freiherr von Banfield"
 HUN_jeno_ratz코0=Jenő Rátz
+#HUN_edgar_keksz:0 "Edgar Keksz"
 HUN_gyorgy_jendrassik코0=György Jendrassik
+#HUN_istvan_shvoy:0 "István Shvoy"
 HUN_shvoy_kalman코0=Shvoy Kálmán
 HUN_gusztav_jany코0=Gusztáv Jány
 HUN_dezso_laszlo코0=Dezso László
@@ -810,7 +824,9 @@ CHI_civil_war_deserters코0=Civil War Deserters
 CHI_communist_uprisings코0=Communist Uprisings
 CHI_communist_uprisings_desc코0=The tensions between communists and nationalists are present in all corners of the county. If communist support in the country goes too high, the communists will take control of a state.
 ROM_mihail_sturdza코0=Mihail Sturdza
+#ROM_generic_democratic_reformer:0 "Iuliu Maniu"
 ROM_iuliu_maniu코0=Iuliu Maniu
+#ROM_generic_communist_revolutionary:0 "Gheorghe Gheorghiu-Dej"
 ROM_gheorghe_gheorghiu_dej코0=Gheorghe Gheorghiu-Dej
 ROM_armand_calinescu코0=Armand Calinescu
 ROM_gheorghe_argeseanu코0=Gheorghe Argeseanu
@@ -895,13 +911,17 @@ CZE_karel_janousek코1=Karel Janoušek
 CZE_jan_golian코0=Jan Golian
 CZE_josef_frantisek코0=Josef Frantisek
 CZE_karel_kuttelwascher코0=Karel Kuttelwascher
+#CZE_generic_fascist_demagogue:0 "Konrad Henlein"
 CZE_konrad_henlein코0=Konrad Henlein
+#CZE_generic_democratic_reformer:0 "Stefan Osusky"
 CZE_stefan_osusky코0=Stefan Osusky
+#CZE_generic_communist_revolutionary:0 "Gustáv Husák"
 CZE_gustav_husak코0=Gustáv Husák
 CZE_vojtech_tuka코0=Vojtech Tuka
 CZE_ferdinand_catlos코0=Ferdinand Catlos
 CZE_jozef_tiso코0=Jozef Tiso
 CZE_jaroslav_fajfr코0=Jaroslav Fajfr
+#CZE_josef_adam:0 "Josef Adam"
 CZE_alois_vicherek코0=Alois Vicherek
 CZE_karel_vaclav_petrik코0=Karel Václav Petrík
 CZE_frantisek_havel코0=Frantisek Havel
@@ -932,8 +952,11 @@ NOR_marinens_flyvebaatfabrikk코0=Marinens Flyvebaatfabrikk
 NOR_honefoss_karosserifabrikk코0=Hønefoss Karosserifabrikk
 NOR_tandbergs_radiofabrikk코0=Tandbergs Radiofabrikk
 NOR_norsk_hydro코0=Norsk Hydro
+#YUG_generic_fascist_demagogue:0 "Dimitrije Ljotic"
 YUG_dimitrije_ljotic코0=Dimitrije Ljotić
+#YUG_generic_democratic_reformer:0 "Milovan Djilas"
 YUG_milovan_djilas코0=Milovan Djilas
+#YUG_generic_communist_revolutionary:0 "Ivo Lola Ribar"
 YUG_ivo_lola_ribar코0=Ivo Lola Ribar
 YUG_draza_mihailovic코1=Draža Mihailović
 YUG_josip_broz_tito코0=Josip Broz Tito
@@ -945,6 +968,7 @@ YUG_petar_kosic코1=Petar Kosić
 YUG_slobodan_jovanovic코0=Slobodan Jovanović
 YUG_ljubomir_maric코1=Ljubomir Marić
 YUG_marijan_polic코1=Marijan Polić
+#YUG_arsa_jovanovic:0 "Arsa Jovanovic"
 YUG_arso_jovanovic코0=Arso Jovanović
 YUG_mihajlo_lukic코1=Mihajlo Lukić
 YUG_danilo_kalafatovic코1=Danilo Kalafatović
@@ -1635,7 +1659,7 @@ LUX_alex_federspiel코0=Alex Federspiel
 LUX_nicolas_de_dixmude코0=Nicolas de Dixmude
 LUX_florent_destriveaux코0=Florent Destriveaux
 ALB_generic_fascist_demagogue코0=Mustafa Merlika-Kruja
-ALB_generic_democratic_reformer코0=Enver Hoxha
+ALB_generic_democratic_reformer코1=Xhafer Bej Ypi
 ALB_generic_communist_revolutionary코0=Mehmet Shehu
 ALB_midhat_frasheri코0=Midhat Frashëri
 ALB_jocelyn_percy코0=Jocelyn Percy
@@ -2559,3 +2583,8 @@ MTG_naval_treaty_adherent_desc코0=We have signed the London Naval Treaty and ac
 MTG_naval_treaty_adherent_reduced코0=Escalator Clause Invoked
 MTG_naval_treaty_adherent_reduced_desc코0=After some signatories of the Washington Naval Treaty have abandoned the London Naval Treaty, we have invoked the Escalator Clause, reducing the restrictions for the size and armament of our capital ships.
 GER_air_safety_regulations코0=Air Safety Regulations
+GER_hans_oster코0=Hans Oster
+GER_alfred_hugenberg코0=Alfred Hugenberg
+GER_carl_friedrich_goerdeler코0=Carl Friedrich Goerdeler
+GER_julius_leber코0=Julius Leber
+GER_theodor_heuss코0=Theodor Heuss
