--- a/loading_tips_l_english.properties
+++ b/loading_tips_l_english.properties
@@ -1,4 +1,4 @@
-LOADING_TIP_0코0=It is humiliating to remain with our hands folded while others write history. It matters little who wins.\n- Benito Mussolini
+﻿LOADING_TIP_0코0=It is humiliating to remain with our hands folded while others write history. It matters little who wins.\n- Benito Mussolini
 LOADING_TIP_1코0=To make a people great it is necessary to send them to battle even if you have to kick them in the pants. That is what I shall do.\n- Benito Mussolini
 LOADING_TIP_2코0=Every soldier must know, before he goes into battle, how the little battle he is to fight fits into the larger picture.\n- Bernard L. Montgomery
 LOADING_TIP_3코0=If we lose the war in the air we lose the war and we lose it quickly.\n- Bernard L. Montgomery
