--- a/logistics_l_english.properties
+++ b/logistics_l_english.properties
@@ -1,4 +1,4 @@
-LOGISTICS_LOGISTICS_LABEL코0=Logistics
+﻿LOGISTICS_LOGISTICS_LABEL코0=Logistics
 LOGISTICS_EFFICIENCY_LABEL코0=Average £prod_eff Production Efficiency
 LOGISTICS_EFFICIENCY_SORT_BY코0=Click to sort by £prod_eff Production Efficiency
 LOGISTICS_EFFICIENCY_DESC코0=Average £prod_eff  Production Efficiency of Factories producing each type of Equipment
@@ -22,6 +22,7 @@ LOGISTICS_RESOURCES_LABEL코0=Resources
 LOGISTICS_RESOURCES_SORT_BY코0=Click to sort by required Resources
 LOGISTICS_RESOURCES_DESC코0=How much resources is required by each Equipment type
 LOGISTICS_RESOURCE_USAGE코0=Using $RESOURCE|Y$
+LOGISTICS_FUEL_PERCENTAGE코0=§H$VALUE|0$%§! of fuel need satisfied.
 LOGISTICS_NO_EQUIPMENT_PRODUCTION코0=No current production of $EQUIPMENT|Y$.
 LOGISTICS_AVERAGE_EFFICIENCY코0=The average £prod_eff  §HProduction Efficiency§! of our §HProduction Lines§! producing $EQUIPMENT|H$ is $EFFICIENCY|Y%$.
 LOGISTICS_AVERAGE_EFFICIENCY_DELAYED코0=Increase £prod_eff  Production Efficiency to increase output.
