--- a/mapmode_l_english.properties
+++ b/mapmode_l_english.properties
@@ -1,4 +1,4 @@
-MAPMODE_FABRICATE_WRONG_COUNTRY코0=Country is not $COUNTRY|Y$
+﻿MAPMODE_FABRICATE_WRONG_COUNTRY코0=Country is not $COUNTRY|Y$
 MAPMODE_FABRICATE_UNSELECT코0=Unselect $STATE|Y$
 MAPMODE_FABRICATE_HAS_CLAIM코0=Already has a claim on $STATE|Y$
 MAPMODE_FABRICATE_IS_CORE코0=Already has a claim on $STATE|Y$
