--- a/modifiers_l_english.properties
+++ b/modifiers_l_english.properties
@@ -1,4 +1,4 @@
-MODIFIER_TECH_PREFIX코0=£tech_mod 
+﻿MODIFIER_TECH_PREFIX코0=£tech_mod 
 MODIFIER_POLITICS_PREFIX코0=£pol_idea 
 MODIFIER_DECISION_PREFIX코1=£decision_icon_small 
 MODIFIER_MISSION_PREFIX코1=£decision_icon_small 
@@ -422,6 +422,8 @@ MODIFIER_INDUSTRIAL_CAPACITY_DOCKYARD_FACTOR코0=Dockyard Output
 MODIFIER_INDUSTRIAL_CAPACITY_DOCKYARD_FACTOR_DESC코0=This effectively increases the amount of work each dockyard can do per hour.
 MODIFIER_INDUSTRY_AIR_DAMAGE_FACTOR코0=Factory Bomb Vulnerability
 MODIFIER_INDUSTRY_AIR_DAMAGE_FACTOR_DESC코0=Having our factories dispersed makes us take less damage from enemy bombing.
+MODIFIER_TECH_AIR_DAMAGE_FACTOR코0=Anti-Air Bombing Damage Reduction
+MODIFIER_TECH_AIR_DAMAGE_FACTOR_DESC코0=Having a technological advantage increases the efficiency of our static anti-air defenses.
 MODIFIER_INDUSTRY_REPAIR_FACTOR코0=Factory Repair Speed
 MODIFIER_INDUSTRY_REPAIR_FACTOR_DESC코1=Modifies §HCivilian Factory§! output for all repairs.
 MODIFIER_PRODUCTION_OIL_FACTOR코0=Synthetic Oil
@@ -870,3 +872,7 @@ modifier_experience_gain_light_cruiser_training_factor코1=Light Cruiser Trainin
 modifier_experience_gain_light_cruiser_combat_factor코1=Light Cruiser Combat Experience Gain
 modifier_experience_gain_submarine_training_factor코1=Submarine Training Experience Gain
 modifier_experience_gain_submarine_combat_factor코1=Submarine Combat Experience Gain
+MODIFIER_ARMOR코0=Armor
+MODIFIER_BREAKTHROUGH코0=Breakthrough
+carrier_experience_bonus_max코1=From Carrier Experience
+carrier_experience_malus_min코1=From Carrier Experience
