--- a/mtg_ideas_l_english.properties
+++ b/mtg_ideas_l_english.properties
@@ -1,4 +1,4 @@
-MEX_callistas코0=Callistas
+﻿MEX_callistas코0=Callistas
 MEX_callistas_desc코0=The supporters of Calles are enriching themselves and abusing their power. Appointed for loyalty rather than ability, they perpetuate a patronage system which corrupts every office and rank in the country. Unless they are reigned in, ordinary Mexicans will continue to deride our ruling government as 'robolucionarios', robber-revolutionaries.
 MEX_church_power_5코0=Catholic State
 MEX_church_power_5_desc코0=The hated Constitution of 1917 has been undone. After decades of abuses against the dignity of the True Faith, we are finally establishing the Holy Church as the ultimate authority, moral and legal, in Mexico!
@@ -15,9 +15,9 @@ MEX_cedillo_tension_desc코0=General Saturnino Cedillo and the caudillos aligned
 MEX_cedillo_tension_2코0=Caudillo Tensions Moderate
 MEX_cedillo_tension_2_desc코0=General Saturnino Cedillo and the caudillos aligned to him are jealously guarding their influence. We may have to act against them if they stand in the way of the government.
 MEX_cedillo_tension_3코0=Caudillo Tensions High
-MEX_cedillo_tension_3_desc코0=General Saturnino Cedillo and the caudillos aligned to him are acting independently of the government. They should be assumed to be in contact with the enemies, internal and external, of {Root.GetLeader} and the Mexican people!
+MEX_cedillo_tension_3_desc코0=General Saturnino Cedillo and the caudillos aligned to him are acting independently of the government. They should be assumed to be in contact with the enemies, internal and external, of [Root.GetLeader] and the Mexican people!
 MEX_cedillo_tension_4코0=Caudillo Tensions Very High
-MEX_cedillo_tension_4_desc코0=General Saturnino Cedillo and the caudillos aligned to him are openly amassing troops in preparation for their rebellion against the legitimate government of {Root.GetLeader}. We must act soon to end this threat to Mexico's unity!
+MEX_cedillo_tension_4_desc코0=General Saturnino Cedillo and the caudillos aligned to him are openly amassing troops in preparation for their rebellion against the legitimate government of [Root.GetLeader]. We must act soon to end this threat to Mexico's unity!
 MEX_brown_water_navy코0=Brown Water Navy
 MEX_brown_water_navy_desc코0=We have a coastal defense force capable of threatening submarine and surface raiders, but a dedicated enemy surface fleet would sweep us aside.
 MEX_blue_water_navy코0=Blue Water Navy
