--- a/peace_l_english.properties
+++ b/peace_l_english.properties
@@ -1,4 +1,4 @@
-PEACE_PEACE_CONFERENCE코0=Peace conference
+﻿PEACE_PEACE_CONFERENCE코0=Peace conference
 PEACE_WINNERS코0=Winners
 PEACE_LOOSERS코0=Losers
 PEACE_LIBERATED코0=Liberated
@@ -24,6 +24,10 @@ PEACE_TAKE_ALL_STATES_LABEL코0=Take All States
 PEACE_LIBERATE_COUNTRY_LABEL코0=Liberate $COUNTRY$
 PEACE_LIBERATE_TO_COUNTRY_LABEL코0=Liberate to $COUNTRY$
 PEACE_PUPPET_COUNTRY_LABEL코0=Puppet
+PEACE_PUPPET_ALL_STATES_LABEL코0=Puppet All States
+PEACE_PUPPET_STATE_LABEL코0=Puppet $STATE$
+PEACE_CUSTOM_PUPPET_ALL_STATES_LABEL코0=$ACTION$ All States
+PEACE_CUSTOM_PUPPET_STATE_LABEL코0=$ACTION$ $STATE$
 PEACE_SATELLITE_COUNTRY_LABEL코0=Satellite $COUNTRY$
 PEACE_PUPPETED코0=Puppeted
 PEACE_ANNEX_COUNTRY_LABEL코0=Annex
@@ -92,3 +96,5 @@ PEACE_PARTICIPANT_DELIMITER_ITEM코0=Click to toggle open/close
 PEACE_PARTICIPANT_TAKE_ALL_STATES코0=Click to Take all States, Right-click to toggle a list of all states
 PEACE_PARTICIPANT_TAKE_ALL_STATES_EXPAND코0=Click to toggle a list of all states
 PEACECONFERENCE_COMPLETE코0=Peace Conference is over\nCalculating Effects...
+PEACE_CONFERENCE_PROVINCE_TOOLTIP_CLICK_TO_TOGGLE코0=§GClick§! to toggle taking states.
+PEACE_CONFERENCE_PROVINCE_TOOLTIP_CLICK_TO_TOGGLE_PUPPET코0=§GShift + Click§! to toggle puppeting states.
