--- a/poland_dlc_focus_l_english.properties
+++ b/poland_dlc_focus_l_english.properties
@@ -1,4 +1,4 @@
-POL_central_region_strategy코0=Central Region Strategy
+﻿POL_central_region_strategy코0=Central Region Strategy
 POL_central_region_strategy_desc코0=By centralizing factories far from any borders, we will boost our production while also protecting them from any would-be conquerors.
 POL_expansion_of_new_towns코0=Expansion Of New Towns
 POL_expansion_of_new_towns_desc코0=It is not enough for towns to established to thrive - they must also be supported to reach their full potential.
@@ -136,4 +136,4 @@ POL_militarism_focus코0=Polish Militarism
 POL_authoritarianism_focus코0=Authoritarianism
 POL_polish_revanchism_focus코0=Polish Revanchism
 POL_internationalism_focus코0=Internationalism
-POL_invite_to_faction_tooltip코0=is invited to {Root.GetFlag}§Y{Root.GetName}§!'s faction.\n
+POL_invite_to_faction_tooltip코0=is invited to [Root.GetFlag]§Y[Root.GetName]§!'s faction.\n
