--- a/politics_l_english.properties
+++ b/politics_l_english.properties
@@ -1,4 +1,4 @@
-POLITICS_SUBGOAL_HEADER코0=$NAME$ ($COLOR$$PROGRESS|%0$§!):
+﻿POLITICS_SUBGOAL_HEADER코0=$NAME$ ($COLOR$$PROGRESS|%0$§!):
 POLITICS_SUBGOAL코0=Objective #$NUMBER$
 DRIFT_DIM_RETURN코0=Party Inertia: §R-$VAL$§!\n
 POL_DAILY_CHANGE코0=Daily Change: $VAL$
