--- a/production_l_english.properties
+++ b/production_l_english.properties
@@ -1,4 +1,4 @@
-PRODUCTION_PRODUCTION_LABEL코0=Production
+﻿PRODUCTION_PRODUCTION_LABEL코0=Production
 PRODUCTION_EQUIPMENTPOOL_LABEL코0=Storage
 PRODUCTION_EFFICIENCY_LABEL코0=§TEfficiency§!
 PRODUCTION_EQUIPMENT_LABEL코0=Equipment
@@ -63,13 +63,13 @@ PRODUCTION_SHIPS_BUTTON_NO_FACTORIES_DISABLED코0=We have §RNo dockyards§!!
 PRODUCTION_CONSUMER_GOODS_VALUE코0=$VALUE$
 PRODUCTION_CONSUMER_GOODS코0=Consumer Goods
 PRODUCTION_CONSUMER_GOODS_LABEL코0=§HConsumer Goods§!
-PRODUCTION_CONSUMER_GOODS_DESC코0=With our current Economic Policy, the people expect $PERCENTAGE|H0%$ of our total number of Factories to produce Consumer Goods. This need is filled by Civilian Factories only, leaving us with $OPERATIONAL|H$ factories where $TRADE_USABLE|H$ can be used for trade.
+PRODUCTION_CONSUMER_GOODS_DESC코1=With our current Economic Policy, the people expect $PERCENTAGE|H0%$ of our number of Civilian and Military Factories to produce Consumer Goods. This need is filled by Civilian Factories only, leaving us with $OPERATIONAL|H$ factories where $TRADE_USABLE|H$ can be used for trade.
 PRODUCTION_CIV_AND_MIL_FACTORIES코0=Civilian and Military Factories: $KEY|H$
 PRODUCTION_REQ_CONSUMER_GOODS_FACTORIES코0=Required Consumer Goods Factories: $KEY|H$
 PRODUCTION_MATERIAL_COST_DESC코0=§TThis Production Line uses $AMOUNT|0H$ unit of $MATERIAL|H$.§!
 PRODUCTION_MATERIAL_COST_LACKING_DESC코2=§T$AMOUNT|0H$ more units are required for full efficiency.§!\nProduction will continue at §Rreduced speed§!.
-PRODUCTION_LINE_CANCEL코3=§GClick to §HCancel§! this Production Line§!\n§GShift+Click to §HCancel§! all Production Lines§!
-PRODUCTION_LINE_CANCEL_SHIP_REFIT코0=§GClick to §RScuttle§! this Ship which is being refit§!
+PRODUCTION_LINE_CANCEL코4=§GClick§! to §RCancel§! this Production Line.\n§GShift+Click§! to §RCancel§! all Production Lines.
+PRODUCTION_LINE_CANCEL_SHIP_REFIT코1=§GClick§! to §RScuttle§! this Ship which is being refit.
 PRODUCTION_CREATE_VARIANT코0=§HCreate variant§!
 PRODUCTION_CANCEL_CONSTRUCTION코0=§TCancel this construction.§!
 PRODUCTION_VARIANT_OBSOLETE_YES코1=Recommission
@@ -91,8 +91,10 @@ INFINITY코0=£infinity_icon
 PRODUCTION_EQUIPMENT_NEED코0=Need: $AMOUNT|Y$
 PRODUCTION_DEPLOY_TO_BASE코0=Deploy to port: $BASE|H$
 PRODUCTION_DEPLOY_TO_FLEET코1=Deploy to task force: $FLEET|H$
+PRODUCTION_DEPLOY_TO_RESERVE_FLEET_THEATER코1=Deploy to the Reserve of theater: $THEATER|H$
 PRODUCTION_NAVAL_DEPLOYMENT_FLEET_INVALID_BASE코0=Deploy target $FLEET|H$ has no base.
 PRODUCTION_NAVAL_DEPLOYMENT_FLEET코1=Deploy target task force $FLEET|H$ with base in $STATE|H$.
+PRODUCTION_NAVAL_DEPLOYMENT_THEATER코0=Deploy target theater $THEATER|H$ with base in $STATE|H$.
 PRODUCTION_NAVAL_DEPLOYMENT_BASE코0=Deploy target base in $STATE|H$.
 PRODUCTION_NAVAL_DEPLOYMENT_INVALID_BASE코0=No deploy target set.
 PRODUCTION_NAVAL_DEPLOYMENT_NOT_DEPLOYABLE코0=Not deployable
@@ -202,20 +204,20 @@ PRODUCTION_FILTER_RIGHTCLICK코0=\n§GRight Click§! to toggle collapsing all of
 PRODUCTION_FILTER_ARMS_FACTORIES코0=Military Factories used
 PRODUCTION_FILTER_DOCKYARDS코0=Naval Dockyards used
 PRODUCTION_DRAG_N_DROP코0=§GDrag and drop§! to change the §Ypriority§!.
-PRODUCTION_COLLAPSE코1=§GClick to collapse.§!\n§GCtrl + Click to collapse all of this category.§!\n§GShift + Click to collapse all Production Lines.§!
-PRODUCTION_EXPAND코1=§GClick to expand.§!\n§GCtrl + Click to expand all of this category.§!\n§GShift + Click to expand all Production Lines.§!
+PRODUCTION_COLLAPSE코2=§GClick§! to collapse.\n§GCtrl + Click§! to collapse all of this category.\n§GShift + Click§! to collapse all Production Lines.
+PRODUCTION_EXPAND코2=§GClick§! to expand.\n§GCtrl + Click§! to expand all of this category.\n§GShift + Click§! to expand all Production Lines.
 PRODUCTION_FACTORY_SCALE_UP코0=§GClick§! to scale up to §Y$SCALE$x§! view.
 PRODUCTION_FACTORY_SCALE_DOWN코0=§GClick§! again to scale down to §Y1x§! view.
 PRODUCTION_ADD_FACTORIES_CLICK코0=§GClick§! to add §Y+1§!\n§GCtrl + Click§! to add §Y+5§!\n§GShift + Click§! to add §Y+10§!
-PRODUCTION_SUB_FACTORIES_CLICK코0=§GClick§! to substract §Y-1§!\n§GCtrl + Click§! to substract §Y-5§!\n§GShift + Click§! to substract §Y-10§!
+PRODUCTION_SUB_FACTORIES_CLICK코0=§GClick§! to subtract §Y1§!\n§GCtrl + Click§! to subtract §Y5§!\n§GShift + Click§! to subtract §Y10§!
 PRODUCTION_ADD_1코0=§GClick§! to add §Y+1§!
 PRODUCTION_ADD_5코0=§GCtrl + Click§! to add §Y+5§!
 PRODUCTION_ADD_10코0=§GShift + Click§! to add §Y+10§!
-PRODUCTION_SUB_1코0=§GClick§! to substract §Y-1§!
-PRODUCTION_SUB_5코0=§GCtrl + Click§! to substract §Y-5§!
-PRODUCTION_SUB_10코0=§GShift + Click§! to substract §Y-10§!
+PRODUCTION_SUB_1코0=§GClick§! to subtract §Y1§!
+PRODUCTION_SUB_5코0=§GCtrl + Click§! to subtract §Y5§!
+PRODUCTION_SUB_10코0=§GShift + Click§! to subtract §Y10§!
 PRODUCTION_ADD_NAVAL_FACTORIES_CLICK코0=§GClick§! to add §Y+1§!
-PRODUCTION_SUB_NAVAL_FACTORIES_CLICK코0=§GClick§! to substract §Y-1§!
+PRODUCTION_SUB_NAVAL_FACTORIES_CLICK코0=§GClick§! to subtract §Y1§!
 PRODUCTION_CLICK_TO_APPEND_OR_INSERT코0=§GClick§! to append new production line at the end.\n§GShift + Click§! to put a new production line at the top.
 PRODUCTION_NAVAL_DEPLOYMENT_STATE_NAME코0=$STATE$ ($LVL|Y$)
 PRODUCTION_LINE_CONVERT_NO_EQUIPMENT_IN_STOCK코0=§RCurrently there is no equipment in stock that we could use to convert into: $VARIANT|H$§!
@@ -242,7 +244,7 @@ PRODUCTION_NAVAL_REPAIRS_LABEL코0=Repair Queue
 PRODUCTION_NAVAL_NAME_LIST코0=Ship Names
 PRODUCTION_NAVAL_NAME_LIST_BUTTON_FALLBACK코0=Ship Names
 PRODUCTION_NAVAL_NAME_LIST_EMPTY_NOT_ALLOWED코0=§REmpty names are not allowed.§!
-PRODUCTION_NAVAL_NAME_LIST_TOO_FEW_PRODUCED코0=§RNames will exceeded amount in production queue.§!
+PRODUCTION_NAVAL_NAME_LIST_TOO_FEW_PRODUCED코0=§RNames will exceed the number of ships in the production queue.§!
 PRODUCTION_NAVAL_NAME_LIST_REMOVE코0=§GClick§! to §Hremove name§!
 PRODUCTION_NAVAL_NAME_LIST_NAME_RESERVED코0=$NAME|H$ is already in use.
 PRODUCTION_NAVAL_NAME_LIST_ADD_NAME코0=§GClick§! to name the next $EQUIPMENT|H$ from this line $NAME|H$.
@@ -261,3 +263,4 @@ PRODUCTION_SHIP_REFIT_TOOLTIP_MORE_VARIANTS코0=and other equipment variants ($S
 PRODUCTION_SUB_UNIT_FILTER코0=Show only $SUBUNIT|H$ ($COUNT|H$ match)
 PRODUCTION_EQUIPMENT_ROLE_NO_FILTER코0=Show all roles
 PRODUCTION_EQUIPMENT_ROLE_FILTER코0=Show only equipments with the role $ROLE|H$
+
