--- a/rules_l_english.properties
+++ b/rules_l_english.properties
@@ -1,4 +1,4 @@
-CAN_DECLARE_WAR_WITHOUT_WARGOAL_WHEN_IN_WAR코1=Can declare war on a neighbor without a wargoal when at war with a major.
+﻿CAN_DECLARE_WAR_WITHOUT_WARGOAL_WHEN_IN_WAR코1=Can declare war on a neighbor without a wargoal when at war with a major.
 CAN_DECLARE_WAR_ON_SAME_IDEOLOGY코0=Can declare war on country with the same ideology group without a war goal.
 CAN_FORCE_GOVERNMENT코0=Can force government of another country to adopt the same ideology.
 CAN_GUARANTEE_OTHER_IDEOLOGIES코0=Can guarantee other ideologies.
