--- a/ship_modules_l_english.properties
+++ b/ship_modules_l_english.properties
@@ -1,3 +1,4 @@
+﻿### EQUIPMENT MODULE CATEGORIES ###
 EQ_MOD_CAT_ship_light_battery_TITLE코0=Rapid Fire Guns
 EQ_MOD_CAT_ship_sub_snorkel_TITLE코0=Snorkel
 EQ_MOD_CAT_ship_torpedo_TITLE코0=Torpedo Launchers
@@ -27,6 +28,7 @@ EQ_MOD_CAT_ship_carrier_armor_TITLE코0=Deck Armor
 EQ_MOD_CAT_ship_deck_space_TITLE코0=Hangar Space
 EQ_MOD_CAT_ship_extra_fuel_tank_TITLE코0=Fuel Tank
 EQ_MOD_CAT_ship_mine_layer_TITLE코1=Minelaying Gear
+### EQUIPMENT MODULE SLOTS ###
 EQ_MOD_SLOT_fixed_ship_battery_slot_TITLE코0=Battery
 EQ_MOD_SLOT_fixed_ship_secondaries_slot_TITLE코0=Secondaries
 EQ_MOD_SLOT_fixed_ship_anti_air_slot_TITLE코0=Anti-Air
@@ -44,6 +46,7 @@ EQ_MOD_SLOT_mid_2_custom_slot_TITLE코0=Mid 2 Custom
 EQ_MOD_SLOT_mid_3_custom_slot_TITLE코0=Mid 3 Custom
 EQ_MOD_SLOT_rear_1_custom_slot_TITLE코0=Rear 1 Custom
 EQ_MOD_SLOT_rear_2_custom_slot_TITLE코0=Rear 2 Custom
+### EQUIPMENT MODULES ###
 ship_light_battery_1코0=85 mm RF. Cannon
 ship_light_battery_1_short코0=Light Battery I
 ship_light_battery_1_desc코0=A relatively small gun for use on destroyers and smaller ships.
@@ -298,6 +301,7 @@ ship_armor_carrier_deck코0=90mm Deck
 ship_armor_carrier_deck_short코0=Flight Deck Armor
 ship_armor_carrier_deck_desc코0=Heavy armor plates protect the hangar spaces against hits by enemy bombers at the cost of less working space.
 SHIP_DESIGNER_MODULE_SELECTION코0=Select Module
+### Nation Specific Modules
 ENG_ship_light_battery_1코0=4 in QF Mk V
 ENG_ship_light_battery_2코0=4.7 in QF Mk IX
 ENG_ship_light_battery_3코0=4.7 in QF Mk XI
@@ -371,6 +375,7 @@ ENG_carrier_ship_engine_1코0=Brown-Curtis 50,000hp
 ENG_carrier_ship_engine_2코0=Parsons 102,000hp
 ENG_carrier_ship_engine_3코0=Parsons 148,000hp
 ENG_carrier_ship_engine_4코0=Parsons 200,000hp
+
 FRA_ship_light_battery_1코0=130mm/40 Model 1919
 FRA_ship_light_battery_2코0=138.6mm/40 Model 1927
 FRA_ship_light_battery_3코0=138.6mm/50 Model 1934
@@ -437,6 +442,7 @@ FRA_ship_armor_cruiser_1코0=20mm Belt/20mm Deck
 FRA_ship_armor_cruiser_2코0=60mm Belt/30mm Deck
 FRA_ship_armor_cruiser_3코0=110mm Belt/80mm Deck
 FRA_ship_armor_cruiser_4코0=140mm Belt/85mm Deck
+
 ITA_ship_light_battery_1코0=102mm/45 S-A
 ITA_ship_light_battery_2코0=120mm/50 OTO
 ITA_ship_light_battery_3코0=120mm/50 Ansaldo
@@ -495,6 +501,7 @@ ITA_carrier_ship_engine_1코0=Beluzzo 50,000hp
 ITA_carrier_ship_engine_2코0=Beluzzo 120,000hp
 ITA_carrier_ship_engine_3코0=Beluzzo 151,000hp
 ITA_carrier_ship_engine_4코0=Beluzzo 200,000hp
+
 USA_ship_light_battery_1코0=4in/50 Mk 9
 USA_ship_light_battery_2코0=5in/38 Mk 12, Mk 21 mt
 USA_ship_light_battery_3코0=5in/38 Mk 12, Mk 30 mt
@@ -565,6 +572,7 @@ USA_carrier_ship_engine_1코0=Curtis 53,500hp
 USA_carrier_ship_engine_2코0=Westinghouse 120,000hp
 USA_carrier_ship_engine_3코0=Westinghouse 150,000hp
 USA_carrier_ship_engine_4코0=Westinghouse 212,000hp
+
 JAP_ship_light_battery_1코0=12cm/45 11th Yr. Type
 JAP_ship_light_battery_2코0=12.7cm/50 3rd Yr. Type
 JAP_ship_light_battery_3코0=10cm/65 Type 98
@@ -639,6 +647,7 @@ JAP_ship_armor_cruiser_2코0=100mm Belt/60mm Deck
 JAP_ship_armor_cruiser_3코0=127mm Belt/60mm Deck
 JAP_ship_armor_cruiser_4코0=145mm Belt/65mm Deck
 JAP_ship_armor_carrier_deck코0=79mm Flight Deck
+
 ENG_ship_armor_bb_1코0=13in Belt/3in Deck
 ENG_ship_armor_bc_1코0=6in Belt/2.5in Deck
 ENG_ship_armor_bb_2코0=14.5in Belt/5.5in Deck
@@ -656,6 +665,7 @@ ITA_ship_armor_bb_2코0=250mm Belt/100mm Deck
 ITA_ship_armor_bc_2코0=305mm Belt/100mm Deck
 ITA_ship_armor_bb_3코0=295mm Belt/162mm Deck
 ITA_ship_armor_bc_3코0=330mm Belt/130mm Deck
+#ITA_ship_armor_cruiser_2:0 "24mm Belt/20mm Deck"
 ITA_ship_armor_cruiser_1코0=70mm Belt/50mm Deck
 ITA_ship_armor_cruiser_2코0=100mm Belt/50mm Deck
 ITA_ship_armor_cruiser_3코0=150mm Belt/70mm Deck
@@ -670,6 +680,7 @@ USA_ship_armor_cruiser_2코0=4in Belt/1.75in Deck
 USA_ship_armor_cruiser_3코0=5in Belt/2.25in Deck
 USA_ship_armor_cruiser_4코0=6in Belt/3.75in Deck
 USA_ship_armor_carrier_deck코0=3.5in Flight Deck
+
 GER_ship_light_battery_1코0=10.5cm/45 SK C/32
 GER_ship_light_battery_2코0=12.7cm/45 SK C/34
 GER_ship_light_battery_3코0=12.7cm/45 SK C/41
@@ -739,6 +750,7 @@ GER_ship_armor_bb_3코0=350mm Belt/130mm Deck
 GER_ship_armor_cruiser_2코0=80mm Belt/60mm Deck
 GER_ship_armor_cruiser_3코0=100mm Belt/88mm Deck
 GER_ship_armor_cruiser_4코0=150mm Belt/90mm Deck
+
 SOV_ship_light_battery_1코0=102mm/60 Pattern 1911
 SOV_ship_light_battery_2코0=130mm/50 B13 Ptn 1936
 SOV_ship_light_battery_3코0=130mm/50 B13 RPC
@@ -809,6 +821,7 @@ SOV_ship_armor_cruiser_2코0=50mm Belt/50mm Deck
 SOV_ship_armor_cruiser_3코0=70mm Belt/50mm Deck
 SOV_ship_armor_cruiser_4코0=100mm Belt/50mm Deck
 SOV_ship_armor_carrier_deck코0=50mm Flight Deck
+
 ARG_ship_light_battery_1코0=120mm/45 Vickers Mk E
 ARG_ship_light_battery_2코0=120mm/45 QF Mk IX
 ARG_ship_heavy_battery_1코0=30.5cm/50 Bethlehem
@@ -836,6 +849,7 @@ ARG_cruiser_ship_engine_4코0=110,000 Shp Engine
 ARG_heavy_ship_engine_1코0=Curtiss 39,500 Shp
 ARG_ship_armor_bb_1코0=280mm Belt/76mm Deck
 ARG_ship_armor_cruiser_1코0=70mm Belt/25mm Deck
+
 BRA_ship_light_battery_1코0=102mm/40 QF Mk IV
 BRA_ship_light_battery_2코0=127mm/38 Mk 12
 BRA_ship_light_battery_3코0=127mm/38 Mk 12 RPC
@@ -859,6 +873,7 @@ BRA_sub_ship_engine_2코0=2,500 Shp Engine
 BRA_heavy_ship_engine_1코0=Vickers 30,000 Shp
 BRA_ship_armor_bb_1코0=229mm Belt/51mm Deck
 BRA_ship_armor_cruiser_1코0=31mm Belt/19mm Deck
+
 CHI_ship_light_battery_1코0=100mm/44 S-Canet M1898
 CHI_ship_light_medium_battery_1코0=14.9cm/37 SK L/40 C/97
 CHI_ship_light_medium_battery_2코0=14cm/50 3rd Yr. Type
@@ -869,6 +884,7 @@ CHI_ship_medium_battery_4코0=20.3cm/50 Auto-Loading
 CHI_ship_secondaries_1코0=120mm/45 Armstrong Y
 CHI_ship_torpedo_1코0=2x 356mm Torpedo Tubes
 CHI_ship_armor_cruiser_1코0=76mm Belt/25mm Deck
+
 CHL_ship_light_battery_1코0=120 mm/45 QF Vickers E
 CHL_ship_heavy_battery_1코0=35.6 cm/45 Armstrong A
 CHL_ship_heavy_battery_2코0=35.6 cm/50 Cannon
@@ -893,6 +909,7 @@ CHL_sub_ship_engine_3코0=3,500 Shp Engine
 CHL_sub_ship_engine_4코0=5,000 Shp Engine
 CHL_heavy_ship_engine_1코0=Brown-Curtis 37,000Shp
 CHL_ship_armor_bb_1코0=229mm Belt/37mm Deck
+
 DEN_ship_heavy_battery_1코0=24 cm/42 K/43 M1906
 DEN_ship_light_medium_battery_1코0=14.9 cm/45 PK L/45
 DEN_ship_secondaries_1코0=150mm/49 L/50 M.06
@@ -901,11 +918,13 @@ DEN_ship_anti_air_1코0=20mm/60 RK Madsen M31
 DEN_ship_anti_air_2코0=20mm/60 RK Madsen M41
 DEN_sub_ship_engine_1코0=Burm. & Wain 900 Shp
 DEN_sub_ship_engine_2코0=Burm. & Wain 1,200 Shp
+
 EST_ship_torpedo_sub_1코0=4x 533mm Torpedo Tubes
 EST_ship_torpedo_sub_2코0=6x 533mm Torp. Tubes
 EST_ship_torpedo_sub_3코0=6x 533mm w/L.Pistons
 EST_ship_torpedo_sub_4코0=6x 533mm w/P.Loading
 EST_sub_ship_engine_1코0=Vickers 1,000 Shp
+
 FIN_ship_light_battery_1코0=102 mm/60 Pattern 1911
 FIN_ship_heavy_battery_1코0=25.4 cm/45 Bofors
 FIN_ship_secondaries_1코0=105mm/50 Bofors M1932
@@ -917,6 +936,7 @@ FIN_ship_anti_air_1코0=20mm/60 RK Madsen M31
 FIN_ship_anti_air_2코0=25mm AA
 FIN_sub_ship_engine_1코0=Atlas 1,160 Shp Engine
 FIN_ship_armor_cruiser_1코0=55mm Belt/20mm Deck
+
 GRE_ship_light_battery_1코0=102 mm/50 Armstrong P
 GRE_ship_light_battery_2코0=128 mm/42 SK C/34
 GRE_ship_light_medium_battery_1코0=15.2cm/45 Armstrong NN
@@ -941,6 +961,7 @@ GRE_light_ship_engine_2코0=Parsons 34,000 Shp
 GRE_sub_ship_engine_1코0=Sulzer 1,420 Shp
 GRE_ship_armor_cruiser_1코0=51mm Belt/25mm Deck
 GRE_ship_armor_cruiser_2코0=100mm Belt/50mm Deck
+
 HOL_ship_light_battery_1코0=120mm/50 W-Fijenoord 5
 HOL_ship_light_battery_2코0=120mm/50 W-Fijenoord 8
 HOL_ship_light_battery_3코0=120mm/50 W-Fijen'd 10
@@ -977,11 +998,13 @@ HOL_heavy_ship_engine_3코0=Parsons 180,000 Shp
 HOL_ship_armor_bc_1코0=225mm Belt/100mm Deck
 HOL_ship_armor_bc_2코0=305mm Belt/110mm Deck
 HOL_ship_armor_cruiser_1코0=50mm Belt/30mm Deck
+
 LAT_ship_torpedo_sub_1코0=6x 450mm Torpedo Tubes
 LAT_ship_torpedo_sub_2코0=4x 533mm Torpedo Tubes
 LAT_ship_torpedo_sub_3코0=6x 533mm Torpedo Tubes
 LAT_ship_torpedo_sub_4코0=6x 533mm w/P.Loading
 LAT_sub_ship_engine_1코0=Sulzer 1,300 Shp
+
 NOR_ship_light_battery_1코0=76 mm/40 Armstrong EOC
 NOR_ship_light_battery_2코0=120 mm/44 Bofors
 NOR_ship_medium_battery_1코0=20.9 cm/44 EOC 1899
@@ -998,6 +1021,7 @@ NOR_ship_torpedo_sub_1코0=2x 450mm Torpedo Tubes
 NOR_ship_torpedo_sub_2코0=4x 450mm Torpedo Tubes
 NOR_light_ship_engine_1코0=De Laval 30,000 Shp
 NOR_sub_ship_engine_1코0=Sulzer 900 Shp
+
 POL_ship_light_battery_1코0=130mm/40 Model 1924
 POL_ship_light_battery_2코0=120mm/50 Bofors M34/36
 POL_ship_torpedo_1코0=3x 533mm Torpedo Tubes
@@ -1019,6 +1043,7 @@ POL_sub_ship_engine_1코0=Normand-Vic. 1,800 Shp
 POL_sub_ship_engine_2코0=Sulzer 4,740 Shp
 POL_sub_ship_engine_3코0=Sulzer 5,400 Shp
 POL_sub_ship_engine_4코0=6,500 Shp Engine
+
 POR_ship_light_battery_1코0=100 mm/41 Armstrong N
 POR_ship_light_battery_2코0=120 mm/50 Vickers G
 POR_ship_torpedo_1코0=2x 450mm Torpedo Tubes
@@ -1036,6 +1061,7 @@ POR_light_ship_engine_1코0=Parsons 33,000 Shp
 POR_sub_ship_engine_1코0=Vickers 2,300 Shp
 POR_sub_ship_engine_2코0=2,800 Shp Engine
 POR_sub_ship_engine_3코0=3,500 Shp Engine
+
 PRU_ship_light_battery_1코0=102 mm/60 Pattern 1911
 PRU_ship_light_medium_battery_1코0=15.2 cm/50 Vickers J
 PRU_ship_light_medium_battery_2코0=15.5 cm/50 Cannon
@@ -1051,6 +1077,7 @@ PRU_ship_anti_air_2코0=40mm/40 Vickers 2-pdr
 PRU_light_ship_engine_1코0=Brown-Boveri 32,700Shp
 PRU_sub_ship_engine_1코0=Nelseco 800 Shp Engine
 PRU_ship_armor_cruiser_1코0=38mm Belt/38mm Deck
+
 ROM_ship_light_battery_1코0=120 mm/45 SCA M1918-19
 ROM_ship_light_battery_2코0=120 mm/50 Bofors Mk 4
 ROM_ship_torpedo_1코0=2x 450mm Torpedo Tubes
@@ -1066,6 +1093,7 @@ ROM_light_ship_engine_2코0=Parsons 52,000 Shp
 ROM_light_ship_engine_3코0=57,000 Shp Engine
 ROM_light_ship_engine_4코0=60,000 Shp Engine
 ROM_sub_ship_engine_1코0=Sulzer 800 Shp
+
 SIA_ship_light_battery_1코0=102 mm/40 QF Mk IV
 SIA_ship_medium_battery_2코0=20 cm/50 3rd Yr No 2
 SIA_ship_medium_battery_3코0=20.3 cm/50 w/RPC
@@ -1081,6 +1109,7 @@ SIA_ship_torpedo_sub_3코0=6x 533mm w/L.Pistons
 SIA_ship_torpedo_sub_4코0=6x 533mm w/P.Loading
 SIA_light_ship_engine_1코0=Brown-Curtis 27,000Shp
 SIA_ship_armor_cruiser_1코0=63mm Belt/38mm Deck
+
 SPR_ship_light_battery_1코0=102 mm/45 Vickers Mk L
 SPR_ship_light_battery_2코0=120 mm/45 Vickers Mk F
 SPR_ship_heavy_battery_1코0=30.5 cm/50 Vickers H
@@ -1117,6 +1146,7 @@ SPR_heavy_ship_engine_1코0=Parsons 15,500 Shp
 SPR_ship_armor_bb_1코0=230mm Belt/40mm Deck
 SPR_ship_armor_cruiser_1코0=50mm Belt/38mm Deck
 SPR_ship_armor_cruiser_2코0=102mm Belt/37mm Deck
+
 SWE_ship_light_battery_1코0=12cm/45 Bofors M24
 SWE_ship_light_battery_2코0=12cm/45 Bofors M24C
 SWE_ship_light_battery_3코0=12cm/50 Bofors M36
@@ -1164,6 +1194,7 @@ SWE_heavy_ship_engine_1코0=Motala 23,910 Shp
 SWE_ship_armor_bb_1코0=200mm Belt/45mm Deck
 SWE_ship_armor_cruiser_1코0=24mm Belt/25mm Deck
 SWE_ship_armor_cruiser_2코0=70mm Belt/30mm Deck
+
 TUR_ship_light_battery_1코0=105 mm/37 SK L/40 C/97
 TUR_ship_light_battery_2코0=120 mm/50 Ansaldo 1926
 TUR_ship_heavy_battery_1코0=28 cm/50 SK L/50
@@ -1189,9 +1220,11 @@ TUR_sub_ship_engine_4코0=B&W Diesel 3,500 Shp
 TUR_heavy_ship_engine_1코0=Parsons 52,000 Shp
 TUR_ship_armor_bc_1코0=270mm Belt/50mm Deck
 TUR_ship_armor_cruiser_1코0=70mm Belt/38mm Deck
+
 URG_ship_light_battery_1코0=120 mm/45 Krupp QF
 URG_ship_light_battery_2코0=120 mm/50 Cannon
 URG_ship_torpedo_1코0=2x 450mm Torpedo Launcher
+
 YUG_ship_light_battery_1코0=120 mm/46 Skoda
 YUG_ship_light_battery_2코0=120 mm/56 Skoda
 YUG_ship_secondaries_1코0=83mm/52 Skoda
