--- a/state_l_english.properties
+++ b/state_l_english.properties
@@ -1,4 +1,4 @@
-STATE_UPGRADE_BUILDING코0=Upgrade $BUILDING|H$.
+﻿STATE_UPGRADE_BUILDING코0=Upgrade $BUILDING|H$.
 STATE_UPGRADE_BUILDING_DESC코0=Days to construct: $COST|H$
 STATE_BUILDING_LEVEL코1=$BUILDING|H$ (State level: $LEVEL|H$)
 STATE_BUILDING_LEVEL_SHARED_SLOTS코0=$LEVEL|H$ $BUILDING|H$
