--- a/stats_l_english.properties
+++ b/stats_l_english.properties
@@ -1,7 +1,8 @@
-STAT_VALUE코0=$VALUE|0H%$
+﻿STAT_VALUE코0=$VALUE|0H%$
 STAT_VALUE_BASE코0=$VALUE|0$
 STAT_VALUE_ADD코0=$VALUE|=+0$
 STAT_VALUE_CHANGE_PERC코0=$VALUE|=+0%$
+STAT_VALUE_CHANGE_PERC_NEG코0=$VALUE|=-0%$
 STAT_VALUE_CHANGE코0=$VALUE|=+0$
 STAT_VALUE_DIFF_NEUTRAL코0= $VALUE|=H0$
 STAT_VALUE_DIFF_POSITIVE코0= $VALUE|=+0$
@@ -199,7 +200,7 @@ STAT_COMMON_MAXIMUM_SPEED_AIR_DESC코0=How quickly this unit can fly under optim
 STAT_COMMON_MAXIMUM_SPEED_VALUE코0=$VALUE|*H1$ km/h
 STAT_COMMON_MAXIMUM_SPEED_DIFF코0= $VALUE|=+1$ km/h
 STAT_NAVY_MAXIMUM_SPEED코0=Max Speed: 
-STAT_NAVY_MAXIMUM_SPEED_DESC코0=A faster ship has an easier time disengaging from pursuers and can close to optimal fire range quicker as well as move faster into position when concentrating fleets.
+STAT_NAVY_MAXIMUM_SPEED_DESC코1=A faster ship has an easier time disengaging from pursuers when attempting to retreat from combat. It is also less likely to be hit by enemy fire, can pursue contacts easier when spotting the enemy, and moves faster outside of battle.
 STAT_NAVY_MAXIMUM_SPEED_VALUE코0=$VALUE|H1$ kn
 STAT_NAVY_MAXIMUM_SPEED_DIFF코0= $VALUE|=+1$
 STAT_NAVY_RANGE코0=Max Range: 
@@ -303,12 +304,14 @@ STAT_TOOLTIP_DESIGNER_DIFF코0=$NAME|H$: $VALUE$
 STAT_COMMON_BUILD_COST_IC_T_CONVERTING코0=§TConversion cost: §!
 STAT_ARMY_EQUIPMENT_CAPTURE_FACTOR코0=Eq. Capture Ratio: 
 STAT_ARMY_EQUIPMENT_CAPTURE_FACTOR_DESC코0=Percentage of the equipment that will be captured from enemy loses.
-STAT_ARMY_EQUIPMENT_CAPTURE_FACTOR_VALUE코0=$VALUE|H+0%$
+STAT_ARMY_EQUIPMENT_CAPTURE_FACTOR_VALUE코0=$VALUE|+0%$
 STAT_ARMY_EQUIPMENT_CAPTURE_FACTOR_DIFF코0=$VALUE|+0%$
+
 STAT_ARMY_FUEL_CAPACITY코0=Fuel Capacity: 
 STAT_ARMY_FUEL_CAPACITY_DESC코0=How much fuel this unit can store. Higher fuel capacity means that the unit will be able to operate at full capacity longer when it lacks the fuel supply.
 STAT_ARMY_FUEL_CAPACITY_VALUE코0=$VALUE|H1$
 STAT_ARMY_FUEL_CAPACITY_DIFF코0= $VALUE|=+$
+
 STAT_COMMON_FUEL_CONSUMPTION코0=Fuel Usage: 
 STAT_COMMON_FUEL_CONSUMPTION_DESC코0=How much fuel this unit uses while it is operating. Air and Sea units will consume fuel while on active missions or during training. Land units with fuel consumption will consume fuel in idle as well, but the combat, movement or training will further increase the consumption.
 STAT_COMMON_FUEL_CONSUMPTION_VALUE코0=$VALUE|H1$
@@ -317,6 +320,7 @@ STAT_COMMON_FUEL_CONSUMPTION_FACTOR코0=Fuel Usage:
 STAT_COMMON_FUEL_CONSUMPTION_FACTOR_DESC코0=How much fuel this unit uses while it is operating. Air and Sea units will consume fuel while on active missions or during training. Land units with fuel consumption will consume fuel in idle as well, but the combat, movement or training will further increase the consumption.
 STAT_COMMON_FUEL_CONSUMPTION_FACTOR_VALUE코0=$VALUE|H2%$
 STAT_COMMON_FUEL_CONSUMPTION_FACTOR_DIFF코0= $VALUE|=-2%$
+
 STAT_NAVY_LG_ATTACK코1=Light Attack: 
 STAT_NAVY_LG_ATTACK_DESC코0=Damage done by light guns. Light guns are better at targetting smaller ships.
 STAT_NAVY_LG_ATTACK_VALUE코0=$VALUE|H1$
@@ -325,6 +329,7 @@ STAT_NAVY_LG_ARMOR_PIERCING코1=Light Piercing:
 STAT_NAVY_LG_ARMOR_PIERCING_DESC코0=Armor piercing of the light guns.
 STAT_NAVY_LG_ARMOR_PIERCING_VALUE코0=$VALUE|H1$
 STAT_NAVY_LG_ARMOR_PIERCING_DIFF코0= $VALUE|=+1$
+
 STAT_NAVY_HG_ATTACK코1=Heavy Attack: 
 STAT_NAVY_HG_ATTACK_DESC코0=Damage done by the heavy guns. Heavy guns are better at targetting bigger ships.
 STAT_NAVY_HG_ATTACK_VALUE코0=$VALUE|H1$
