--- a/strategic_region_names_l_english.properties
+++ b/strategic_region_names_l_english.properties
@@ -1,4 +1,4 @@
-STRATEGICREGION_1코0=Southern England
+﻿STRATEGICREGION_1코0=Southern England
 STRATEGICREGION_2코0=Northern England
 STRATEGICREGION_3코1=Scotland
 STRATEGICREGION_4코0=Ireland
