--- a/supply_area_names_l_english.properties
+++ b/supply_area_names_l_english.properties
@@ -1,4 +1,4 @@
-SUPPLYAREA_1코0=SupplyArea
+﻿SUPPLYAREA_1코0=SupplyArea
 SUPPLYAREA_2코0=SupplyArea
 SUPPLYAREA_3코0=SupplyArea
 SUPPLYAREA_4코0=SupplyArea
