--- a/technology_sharing_l_english.properties
+++ b/technology_sharing_l_english.properties
@@ -1,4 +1,4 @@
-commonwealth_research_name코0=Commonwealth Research
+﻿commonwealth_research_name코0=Commonwealth Research
 commonwealth_research_desc코0=Reduced research time for technologies researched by other Commonwealth countries.
 comintern_research_name코0=Comintern Research
 comintern_research_desc코0=Reduced research time for technologies researched by other Comintern countries.
