--- a/theater_l_english.properties
+++ b/theater_l_english.properties
@@ -1,4 +1,4 @@
-ALERT_LOW_SUPPLY코0=§RSupply shortage!§!
+﻿ALERT_LOW_SUPPLY코0=§RSupply shortage!§!
 ACTIVATE_PHASE코0=Activate phase
 ORDER_DETACH코0=Split up advance
 ORDER_DEFENSIVE_LINE코0=Assign Front Line
@@ -52,6 +52,7 @@ ORDER_CONNECT_TOOLTIP_INFO코0=\n§GRight-click§! to begin the §Yfree drawing 
 ORDER_CONNECT_CANT_CONNECT_HERE코0=§RMove the mouse cursor over the order that connection is allowed to.§!
 EDIT_MODE_CLICK_TO_EDIT_INVASION코0=\n§GClick§! to edit this §YNaval invasion§!
 EDIT_MODE_CLICK_TO_EDIT_PARADROP코0=\n§GClick§! to edit this §YParadrop order§!
+EDIT_MODE_CLICK_TO_REORDER코0=\n§GClick§! to swap order of §HArmies§! along the frontline
 UNITS_ASSIGNED_TO_ORDER_HEADER코0=§HDivisions assigned to this order:§!\n
 NO_UNITS_ASSIGNED_TO_ORDER코0=§RThere are no units assigned to this order.§!
 ASSIGN_UNITS_TO_FALLBACK_AG_ORDER코0=Select a full army group and §GCtrl + Click§! to assign all units without Army orders to assign them to this order.
