--- a/traits_l_english.properties
+++ b/traits_l_english.properties
@@ -1,4 +1,4 @@
-cc_leader코0=General
+﻿cc_leader코0=General
 fm_leader코0=Field Marshal
 navy_leader코0=Admiral
 communist_revolutionary코0=Communist Revolutionary
@@ -437,8 +437,8 @@ FIELD_MARSHAL_TRAITS_DESC코0=Field Marshal traits can only be assigned to Field
 TERRAIN_TRAITS_DESC코0=Terrain Traits give bonuses to generals that fights in specific terrains. They can be manually assigned or gained through experience like Earned Traits.
 CONFIRMTRAITASSIGNMENT코0=Assign Trait to General
 CONFIRMTRAITASSIGNMENT_DESC코0=Are you sure you want to assign $TRAIT|H$ to $LEADER|H$?
-CONFIRMTRAITASSIGNMENT_DESC_REMAINING코0=After assigning this trait, you will have $NUM|H$ more avaliable trait slots to assign for this general.
-CONFIRMTRAITASSIGNMENT_DESC_REMAINING_NONE코0=After assigning this trait, you will have §Rno§! avaliable trait slots to assign for this general.
+CONFIRMTRAITASSIGNMENT_DESC_REMAINING코0=After assigning this trait, you will have $NUM|H$ more available trait slots to assign for this general.
+CONFIRMTRAITASSIGNMENT_DESC_REMAINING_NONE코0=After assigning this trait, you will have §Rno§! available trait slots to assign for this general.
 JAP_samurai_lineage코0=Samurai Lineage
 JAP_samurai_lineage_desc코1=§LThis man hails from proud lineage of Samurai and remains true to the old traditions and loyalties.§!
 JAP_communist_sympathizer코0=Communist Sympathizer
@@ -520,7 +520,7 @@ recently_promoted코0=Recently Promoted
 recently_promoted_desc코1=§LAdjusting to the responsibilities of the new rank.§!
 TRAIT_WILL_EXPIRE코0=Trait will expire in $DAYS|H$ days.
 TRAIT_NOT_ACTIVE_WHEN_COMMANDING_AN_ARMY코0=§RTrait not active when commanding an army.§!
-expert_improviser_movement_bonus_on_land코0=Movement Bonus On Land: §G+10%§!
+expert_improviser_movement_bonus_on_land코0=Movement Bonus On Land: §G+10.0%§!
 anti_communist_crusader코0=Anti-Communist Crusader
 exiled_leader코0=Exiled Leader
 exiled_leader_desc코1=This officer fought on after the defeat of their homeland. They excel in commanding other exiles that share their drive and enthusiasm for fighting.
@@ -653,3 +653,7 @@ chamberlain_appeaser코0=Appeaser
 rearmer코0=Rearmer
 conservative_grandee코0=Conservative Grandee
 genial_anti_revolutionary코0=Genial Anti-Revolutionary
+liberal_journalist코0=Liberal Journalist
+anti_fascist_agent코0=Anti-Fascist Agent
+monarchist_media_mogul코0=Monarchist Media Mogul
+connected_citizen코0=Connected Citizen
