--- a/triggers_l_english.properties
+++ b/triggers_l_english.properties
@@ -1,4 +1,4 @@
-TRIGGER_HAS_COMBAT_MODIFIER코0=Has combat modifier: $MODIFIER|H$
+﻿TRIGGER_HAS_COMBAT_MODIFIER코0=Has combat modifier: $MODIFIER|H$
 TRIGGER_IS_FRONTAGE_FULL코0=Frontage filled
 TRIGGER_IS_NOT_FRONTAGE_FULL코0=Frontage not filled
 TRIGGER_HAS_RESERVES코0=Has reserves
@@ -349,6 +349,10 @@ TRIGGER_HAS_CUSTOM_DIFFICULTY_ON코0=Using custom difficulty: $DIFFICULTY$
 PLAYER_HAS_CUSTOM_DIFFICULTY_ON코0=Player using custom difficulty: $DIFFICULTY$
 TRIGGER_ALLIANCE_STRENGTH_RATIO_MORE_THAN코0=Estimated army strength ratio of $VALUE|H0%$ or more compared to enemies.
 TRIGGER_ALLIANCE_STRENGTH_RATIO_LESS_THAN코0=Estimated army strength ratio of $VALUE|H0%$ or less compared to enemies.
+TRIGGER_NAVAL_CONVOY_DANGER_LESS_THAN코0=Convoy Threat less than $VALUE|H0%$
+TRIGGER_NAVAL_CONVOY_DANGER_MORE_THAN코0=Convoy Threat more than $VALUE|H0%$
+TRIGGER_NAVAL_MINE_DANGER_LESS_THAN코0=Mine Threat less than $VALUE|H0%$
+TRIGGER_NAVAL_MINE_DANGER_MORE_THAN코0=Mine Threat more than $VALUE|H0%$
 TRIGGER_HAS_UNIT_LEADER코0=Has unit leader with ID: $ID|Y$
 TRIGGER_HAS_NOT_UNIT_LEADER코0=Does not have unit leader with ID: $ID|Y$
 TRIGGER_FACTION_HAS_AT_LEAST_MEMBERS코0=In a faction with at least $AMOUNT|Y$ members
