--- a/tutorial_l_english.properties
+++ b/tutorial_l_english.properties
@@ -1,4 +1,4 @@
-TUTORIAL_1코0=TUTORIAL (1/15)
+﻿TUTORIAL_1코0=TUTORIAL (1/15)
 TUTORIAL_2코0=TUTORIAL (2/15)
 TUTORIAL_3코0=TUTORIAL (3/15)
 TUTORIAL_4코0=TUTORIAL (4/15)
