--- a/victory_points_l_english.properties
+++ b/victory_points_l_english.properties
@@ -1,4 +1,4 @@
-VICTORY_POINTS_TOOLTIP코0=§G$NAME$§! victory points = §Y$POINTS$§!
+﻿VICTORY_POINTS_TOOLTIP코0=§G$NAME$§! victory points = §Y$POINTS$§!
 VICTORY_POINTS_6521코0=Berlin
 VICTORY_POINTS_692코0=Munich
 VICTORY_POINTS_6469코0=Essen
@@ -521,7 +521,7 @@ VICTORY_POINTS_6882코0=Newark
 VICTORY_POINTS_6973코0=La Spezia
 VICTORY_POINTS_6984코0=Baltimore
 VICTORY_POINTS_7132코0=Oran
-VICTORY_POINTS_7371코0=Kuching
+VICTORY_POINTS_7371코1=Brunei
 VICTORY_POINTS_7617코0=Colón
 VICTORY_POINTS_7940코0=Golmud
 VICTORY_POINTS_7960코0=Abu Dhabi
@@ -889,3 +889,4 @@ VICTORY_POINTS_12034코0=Batna
 VICTORY_POINTS_11921코0=Sfax
 VICTORY_POINTS_7005코0=Gabès
 VICTORY_POINTS_3560코0=Sedan
+VICTORY_POINTS_1208코0=Kuching
