--- a/wtt_focus_l_english.properties
+++ b/wtt_focus_l_english.properties
@@ -1,8 +1,8 @@
-CHI_secure_internal_politics코0=Secure Internal Politics
+﻿CHI_secure_internal_politics코0=Secure Internal Politics
 CHI_secure_internal_politics_desc코1=If our government is to survive in the confusing mess of Chinese politics, we must not be distracted by internal squabbles. Any internal opposition must be rooted out.
 CHI_cooperation_with_the_nationalists코0=Cooperation With the Nationalists
 CHI_cooperation_with_the_nationalists_desc코1=The Nationalists offer the best chance of uniting the country and defeating the Japanese. We should ensure that they don't see us as a threat.
-CHI_cooperation_with_the_nationalists_effect_tooltip코0={WTT_communist_china.GetNameDefCap} and the Warlords who have sided with the Communists can start §HBorder Conflicts§! with us in response to this.
+CHI_cooperation_with_the_nationalists_effect_tooltip코0=[WTT_communist_china.GetNameDefCap] and the Warlords who have sided with the Communists can start §HBorder Conflicts§! with us in response to this.
 CHI_technological_cooperation코0=Technological Cooperation
 CHI_technological_cooperation_desc코1=Our cooperation with the Central Government will ensure that we have access to any new technologies they develop.
 CHI_new_model_province코0=New Model Province
@@ -37,10 +37,10 @@ CHI_communist_administrators_desc코1=The old guard of administrators is too ent
 CHI_join_the_chinese_soviet코0=Join the Chinese Soviet
 CHI_join_the_chinese_soviet_desc코1=The revolution can only succeed if the Communists stand together. Of course, we must ensure that no counter-reactionary elements within the party attempts to derail the revolution before it even started.
 CHI_the_yanan_incident코0=The Yan'an Incident
-CHI_the_yanan_incident_effect_tt코0=Ask §H{SOV.GetNameDef}§! for support to replace §H{WTT_communist_china.GetNameDef}§! as communist leader.\nThis will lead to a war with §H{WTT_communist_china.GetNameDef}§! if they refuse.\nThis deal with §H{SOV.GetNameDef}§! will open us up to demands from {SOV.GetLeader}\n
+CHI_the_yanan_incident_effect_tt코0=Ask §H[SOV.GetNameDef]§! for support to replace §H[WTT_communist_china.GetNameDef]§! as communist leader.\nThis will lead to a war with §H[WTT_communist_china.GetNameDef]§! if they refuse.\nThis deal with §H[SOV.GetNameDef]§! will open us up to demands from [SOV.GetLeader]\n
 CHI_the_yanan_incident_desc코1=The current leader of the party has turned his back on the socialist brothers in the Soviet Union. We should approach the Soviets to secure their support in carrying the revolution through all of China.
 CHI_opposition코0=Opposition
-CHI_opposition_effect_tooltip코0=§H{WTT_current_china_leader.GetNameDef}§! can start a border war with us in response to this.
+CHI_opposition_effect_tooltip코0=§H[WTT_current_china_leader.GetNameDef]§! can start a border war with us in response to this.
 CHI_opposition_desc코1=The Central Government is corrupt and weak. The Communists wish to destroy 5000 years of Chinese history. This situation calls for a Great leader, someone who is willing to make the hard choices and unite the country - by any means necessary.
 CHI_public_works코0=Public Works
 CHI_public_works_desc코1=The population must be able to see that we are working for their own good. A few high-profile projects will serve as useful propaganda props and give them a taste of what all China could look like if they supported us more.
@@ -84,8 +84,8 @@ CHI_anti_opposition_campaigns_effect_tooltip_no_communists코0=§RNo Warlords ha
 CHI_anti_opposition_campaigns_effect_tooltip_no_nationalists코0=§RNo Warlords have sided with the Nationalists yet.§!\n
 CHI_institute_cross_border_raids코0=Institute Cross-Border Raids
 CHI_institute_cross_border_raids_desc코0=We won't be taken seriously as an independent contender in the struggle for Chinese leadership unless we demonstrate to the world that we are able and willing to fight for our lands. A few small incursions will show our determination and might allow us to seize some undefended territory.
-CHI_institute_cross_border_raids_effect_tooltip코0=Unlocks £decision_icon_small §HDecisions§! to start §HBorder Conflicts§! with Warlords and {WTT_communist_china.GetNameDef}\n
-CHI_provoke_border_clashes_effect_tooltip코0=Unlocks £decision_icon_small §HDecisions§! to start a §HBorder Conflict§! with {WTT_current_china_leader.GetNameDef}\n
+CHI_institute_cross_border_raids_effect_tooltip코0=Unlocks £decision_icon_small §HDecisions§! to start §HBorder Conflicts§! with Warlords and [WTT_communist_china.GetNameDef]\n
+CHI_provoke_border_clashes_effect_tooltip코0=Unlocks £decision_icon_small §HDecisions§! to start a §HBorder Conflict§! with [WTT_current_china_leader.GetNameDef]\n
 CHI_inflation_up_tt코0=§RIncreases§! inflation.\n
 CHI_inflation_down_tt코0=§GReduces§! inflation.\n
 CHI_invite_foreign_investors코0=Invite Foreign Investors
@@ -445,7 +445,7 @@ JAP_red_brigades_desc코0=Every man and woman most do their duty to protect the 
 JAP_communist_volunteers코0=Communist Volunteers
 JAP_communist_volunteers_desc코0=Our struggle does not end here. We must see to lift up other nations, as well. Our best and brightest shall be sent forth to champion our cause in those nations that have embraced the revolution!
 JAP_asian_communist_solidarity코0=Asian Communist Solidarity
-JAP_asian_communist_solidarity_tt코0=Invite §H{WTT_communist_china.GetNameWithFlag}§! to our faction.
+JAP_asian_communist_solidarity_tt코0=Invite §H[WTT_communist_china.GetNameWithFlag]§! to our faction.
 JAP_asian_communist_solidarity_desc코0=We must stand with our Asian brethren. The Western form of communism has no place here, but together with our neighbours we can spread a version of it that suits Asian needs.
 JAP_nationalize_the_zaibatsus코0=Nationalize the Zaibatsus
 JAP_nationalize_the_zaibatsus_desc코0=The largest corporations of our nation have long had unprecedented political and economical power. It ends here. The state's control will not be challenged.
@@ -462,7 +462,7 @@ JAP_liaison_conference_desc코0=By sending liaisons of all branches of governmen
 JAP_greater_east_asian_co_prosperity_sphere코0=Greater East-Asian Co-Prosperity Sphere
 JAP_greater_east_asian_co_prosperity_sphere_desc코0=The time of Western imperialism has come to an end. The peoples of Asia must band together and stand as a strong, unified continent, under our leadership. Asia for the Asiatics!
 JAP_intervene_in_china코1=Marco Polo Bridge Incident
-JAP_intervene_in_china_desc코1={Root.GetNameDefCap} is poor in resources, but our neighbours are not. We must take from them what we lack, and only require an excuse to begin doing so. Such an excuse could be provided by a few enterprising soldiers, after which the Emperor will have no choice but to assent to a war, no matter how ill-prepared...
+JAP_intervene_in_china_desc코1=[Root.GetNameDefCap] is poor in resources, but our neighbours are not. We must take from them what we lack, and only require an excuse to begin doing so. Such an excuse could be provided by a few enterprising soldiers, after which the Emperor will have no choice but to assent to a war, no matter how ill-prepared...
 JAP_secure_china코0=Secure China
 JAP_secure_china_desc코0=Chinese resistance is proving to be stubborn and unceasing. We must redouble our efforts to pacifying the mainland with all haste.
 JAP_develop_chinese_resources코0=Develop Chinese Resources
@@ -470,7 +470,7 @@ JAP_develop_chinese_resources_desc코0=We must develop the rich Chinese resource
 JAP_strike_south_doctrine코0=Strike South Doctrine
 JAP_strike_south_doctrine_desc코0=Though rich, China does not possess all resources we require. Not far away to the south, though, lie the Dutch East Indies and the British colonies of Malaya and Borneo. For true self-sufficiency we must wrest control over these area away from the European imperialists.
 JAP_non_aggression_pact_with_the_soviet_union코0=Non-Aggression Pact With the Soviet Union
-JAP_non_aggression_pact_with_the_soviet_union_desc코0=Our northern border must be secured if we are to have the freedom to strike south. We shall begin negotiations with the {SOV.GetNameDef} immediately.
+JAP_non_aggression_pact_with_the_soviet_union_desc코0=Our northern border must be secured if we are to have the freedom to strike south. We shall begin negotiations with the [SOV.GetNameDef] immediately.
 JAP_bypass_the_philippines코0=Bypass the Philippines
 JAP_bypass_the_philippines_desc코0=The Philippines are an unwelcome distraction on the way to our true goal. We shall ignore it, for now.
 JAP_secure_the_philippines코0=Secure the Philippines
@@ -489,7 +489,7 @@ JAP_guide_the_zaibatsus_desc코0=The largest corporations of our nation have lon
 JAP_nationalize_war_industry코0=Nationalize War Industry
 JAP_nationalize_war_industry_desc코0=Increasing state control over our war industry will go a long way to improving efficiency and, therefore, output.
 JAP_coal_liquification코0=Coal Liquification
-JAP_coal_liquification_desc코0={JAP.GetNameDefCap} is lacking in oil, and so we must redouble our efforts in the field of synthetic oil.
+JAP_coal_liquification_desc코0=[JAP.GetNameDefCap] is lacking in oil, and so we must redouble our efforts in the field of synthetic oil.
 JAP_national_mobilization_law코0=National Mobilization Law
 JAP_national_mobilization_law_desc코0=New legislation will make military service more ubiquitous, thereby instilling in the people a sense of duty, as well as making the necessity of war clear to them.
 JAP_national_research_policy코0=National Research Policy
@@ -514,15 +514,15 @@ JAP_showa_restoration_desc코0=The time for figureheads is long past, and the Em
 JAP_modern_shogunate코0=Modern Shogunate
 JAP_modern_shogunate_desc코0=The Emperor must remain in a more ceremonial role, with strong middlemen who act in his name. This will certainly allow the Emperor's word to carry further and wider.
 JAP_prepare_for_war_with_the_soviet_union코0=Prepare For War With the Soviet Union
-JAP_prepare_for_war_with_the_soviet_union_desc코0=The communist threat to our northern borders must be dealt with. We must begin preparations for a war with {SOV.GetNameDef}.
+JAP_prepare_for_war_with_the_soviet_union_desc코0=The communist threat to our northern borders must be dealt with. We must begin preparations for a war with [SOV.GetNameDef].
 JAP_join_the_london_naval_treaty코0=Join the London Naval Treaty
 JAP_join_the_london_naval_treaty_desc코0=We must protect our flanks if we are to take on the bear. If signing a piece of paper regulating our naval build-up brings us peace, then so be it.
 JAP_build_up_the_manchurian_army코0=Build Up the Manchurian Army
-JAP_build_up_the_manchurian_army_desc코0={MAN.GetNameDefCap} will be at the forefront of any northern war. We must ensure they are strong enough to take any potential enemy attacks.
+JAP_build_up_the_manchurian_army_desc코0=[MAN.GetNameDefCap] will be at the forefront of any northern war. We must ensure they are strong enough to take any potential enemy attacks.
 JAP_non_aggression_pact_with_china코0=Non-Aggression Pact With China
 JAP_non_aggression_pact_with_china_desc코0=Though our relations with China have historically been strenuous, to say the least, we now need a non-aggression pact with them to free up troops for our northern push.
 JAP_create_a_manchurian_imperial_air_force코0=Create a Manchurian Imperial Air Force
-JAP_create_a_manchurian_imperial_air_force_desc코0=Air superiority will be key to winning the war. If {MAN.GetNameDef} had their own air force this would go a long way to improving our air situation.
+JAP_create_a_manchurian_imperial_air_force_desc코0=Air superiority will be key to winning the war. If [MAN.GetNameDef] had their own air force this would go a long way to improving our air situation.
 JAP_technological_exchange코0=Technological Exchange
 JAP_technological_exchange_desc코0=We require allies to take on the bear. Germany is not only a good candidate, but also has ample technological advances that could be shared with us to aid in our fight.
 JAP_preemptive_war코0=Pre-emptive War
@@ -548,7 +548,7 @@ JAP_the_showa_constitution_desc코0=We accept and respect our nation's imperial 
 JAP_west_pacific_treaty_organization코0=West Pacific Treaty Organization
 JAP_west_pacific_treaty_organization_desc코0=An alliance of our own with other asian nations will allow us to stand firmly against any potential threats to our new-found way of life.
 JAP_rekindle_the_old_alliance코0=Rekindle the Old Alliance
-JAP_rekindle_the_old_alliance_desc코0=Our best chances lie with our erstwhile ally in the Great War. We will re-activate the old alliance and stand with {ENG.GetNameDef} in the defence of democracy.
+JAP_rekindle_the_old_alliance_desc코0=Our best chances lie with our erstwhile ally in the Great War. We will re-activate the old alliance and stand with [ENG.GetNameDef] in the defence of democracy.
 JAP_pacific_guardian코0=Pacific Guardian
 JAP_pacific_guardian_desc코0=We will assume the role of guardian of all Asian states in and around the Pacific. Once freed from Western imperialism, they will require a guiding hand to lift them up as full-fledged democracies.
 JAP_anti_communist_bulwark코0=Anti-Communist Bulwark
@@ -563,9 +563,9 @@ JAP_liberate_manchuria_tt코0=Decision can be taken after conquest of Manchuria.
 JAP_ultimate_deterrence코0=Ultimate Deterrence
 JAP_ultimate_deterrence_desc코0=The best way to protect our citizens is to ensure they never fight in a war. The development of new weapons of terrible power may ensure they never have to.
 JAP_full_sovereignty_for_the_philippines코0=Full Sovereignty for the Philippines
-JAP_full_sovereignty_for_the_philippines_desc코0=Self-determination must be spread further throughout Asia. {USA.GetNameDefCap} continues to control the Philippines, and must be pressured into respecting the Philippine people's democratic rights.
+JAP_full_sovereignty_for_the_philippines_desc코0=Self-determination must be spread further throughout Asia. [USA.GetNameDefCap] continues to control the Philippines, and must be pressured into respecting the Philippine people's democratic rights.
 JAP_the_manchurian_project코0=The Manchurian Project
-JAP_the_manchurian_project_desc코0=While our islands are scarce in usable land, our mainland possessions are not. What we cannot build up ourselves, we can build up on the mainland, instead. We will begin a large-scale industrialization program for {MAN.GetNameDef}.
+JAP_the_manchurian_project_desc코0=While our islands are scarce in usable land, our mainland possessions are not. What we cannot build up ourselves, we can build up on the mainland, instead. We will begin a large-scale industrialization program for [MAN.GetNameDef].
 JAP_expand_the_showa_steel_works코0=Expand the Showa Steel Works
 JAP_expand_the_showa_steel_works_desc코0=We must expand the Showa Steel Works to drastically increase its production, as a crucial prerequisite for large-scale industrialization.
 JAP_develop_aluminum_sources코0=Develop Aluminum Sources
@@ -633,6 +633,7 @@ JAP_long_lance_torpedoes코0=Long Lance Torpedoes
 JAP_long_lance_torpedoes_desc코0=The cruelties of global resource distribution have left our navy outnumbered by the enemy. We will therefore develop the world's most advanced torpedo, yet: a very long-range and powerful weapon, propelled by compressed oxygen rather than compressed air, that can allow our smaller surface ships to strike well above their weight.
 JAP_torpedo_cruisers코0=Torpedo Cruisers
 JAP_torpedo_cruisers_desc코0=We will dedicate a whole class of ships to carrying huge numbers of our new torpedoes, enabling them to wreak havoc to the enemy fleet.
+JAP_yamato_tt코0=Adds two Yamato-Class Super Battleships to the production queue, at 75% and 50% complete, respectively.
 cost_reduced_last_stand코1=Allows the use of the §YLast Stand§! command ability at greatly reduced cost.\n
 MAN_pacify_the_countryside코0=Pacify the Countryside
 MAN_pacify_the_countryside_desc코0=Ever since we have come to power, outlaws and rebels have tried to contest our rule in the more remote areas of the country. If we want to be taken seriously as a government, we need to root out these terrorists and show the population that we can enforce our rule.
