--- a/adjacency_rules_l_english.properties
+++ b/adjacency_rules_l_english.properties
@@ -1,4 +1,4 @@
-PERMISSION_CONTESTED코0=Contested
+﻿PERMISSION_CONTESTED코0=Contested
 PERMISSION_CONTESTED_DESC코0=Due to the war of controllers: $SIDE1|H$ vs $SIDE2|H$
 PERMISSION_ENEMY코0=Enemy
 PERMISSION_ENEMY_DESC코0=Due to our rival relations with one of the controllers: $ENEMY|H$
@@ -20,5 +20,5 @@ BOSPHORUS_STRAIT코0=Bosphorus Strait
 disable_canal_tt코0=§RThis canal has been partly demolished, and must be repaired before it can once again be traversed by ships.§!
 SUEZ_CANAL_BLOCKED코0=Suez Canal Blown
 PANAMA_CANAL_BLOCKED코0=Panama Canal Blown
-SUEZ_CANAL_BLOCKED_FOR_COUNTRY코0=Suez Canal Blocked for {Root.GetName}
-PANAMA_CANAL_BLOCKED_FOR_COUNTRY코0=Panama Canal Blocked for {Root.GetName}
+SUEZ_CANAL_BLOCKED_FOR_COUNTRY코0=Suez Canal Blocked for [Root.GetName]
+PANAMA_CANAL_BLOCKED_FOR_COUNTRY코0=Panama Canal Blocked for [Root.GetName]
