--- a/alerts_l_english.properties
+++ b/alerts_l_english.properties
@@ -1,4 +1,4 @@
-ALERT_RIGHTCLICK코0=§GRight-click to dismiss§!
+﻿ALERT_RIGHTCLICK코0=§GRight-click to dismiss§!
 ALERT_RIGHTCLICK_REPORT코0=§GRight-click to dismiss§!. This will also dismiss all unread on-map reports of this type.
 alert_hostile_troops_instant코0=§RHostile Troop§!
 alert_hostile_troops_delayed코1=There are hostile troops present in the garrisoned area.
@@ -166,7 +166,9 @@ ALERT_PRIORITY코0=§HFleet Alert Priority:§! $TYPE$
 ALERT_PRIORITY_NORMAL코0=Normal
 ALERT_PRIORITY_HIGH코0=§GHigh§!
 ALERT_PRIORITY_DETAILS코0=Fleets on high alert priority will report their alerts along with other global alerts.
+
 ALERT_RIGHTCLICK_DISMISS_CURRENT_SPOTTERS코0=§GRight-click to dismiss current spottings§!
 ALERT_LEFTCLICK_TOGGLE_SPOTTER코0=§GLeft-click to toggle between spottings§!
 ALERT_SPOTTER_INFO코0=There are $NUM|H$ new spottings in the regions by the fleets that are marked as important.
 ALERT_SPOTTER_INFO_REGION코0=There are $NUM|H$ new spottings in this region.
+
