--- a/chat_l_english.properties
+++ b/chat_l_english.properties
@@ -1,4 +1,4 @@
-CHAT_USERJOINEDCHANNEL코0=$NAME$ joined.
+﻿CHAT_USERJOINEDCHANNEL코0=$NAME$ joined.
 CHAT_USERDISCONNECTED코0=$NAME$ disconnected.
 CHAT_USERWASBANNED코0=$NAME$ was banned.
 CHAT_USERLEFTCHANNEL코0=$NAME$ left the channel.
