--- a/combat_l_english.properties
+++ b/combat_l_english.properties
@@ -1,4 +1,4 @@
-COMBAT_COMMITED_LABEL코0=$COUNT$ Divisions
+﻿COMBAT_COMMITED_LABEL코0=$COUNT$ Divisions
 COMBAT_RESERVES_LABEL코0=$COUNT$ Reserves
 NO_TACTIC코0=No tactic selected
 USE_COMPARE_BATTLE_LOC코0=$NAME$: $VALUE1$/$VALUE2$
@@ -121,6 +121,8 @@ LAND_COMBAT_TOOLTIP_DEFENDER코0=Defender: $COUNT|Y$ divisions ($COUNTRIES$)
 LAND_COMBAT_TOOLTIP_NO_INTEL코0=You have no intel on this combat.
 NAVAL_COMBAT_TOOLTIP_ATTACKER코1=Attacker: $COUNT|Y$ task forces ($COUNTRIES$)
 NAVAL_COMBAT_TOOLTIP_DEFENDER코1=Defender: $COUNT|Y$ task forces ($COUNTRIES$)
+NAVAL_COMBAT_TOOLTIP_ATTACKER_WITH_CONVOYS코1=Attacker: $COUNT|Y$ task forces and $CONVOY_COUNT|Y$ convoys ($COUNTRIES$)
+NAVAL_COMBAT_TOOLTIP_DEFENDER_WITH_CONVOYS코1=Defender: $COUNT|Y$ task forces and $CONVOY_COUNT|Y$ convoys ($COUNTRIES$)
 NAVAL_COMBAT_CLICK_DESC코0=§GClick to show the battle in progress.§!\n§GRight-Click to pan to the combat.§!
 NAVAL_COMBAT_ATTACKER_ACTUAL_PARTICIPANT코0=Attacker side ( $COUNTRY|Y$ ) has $COUNT|Y$ ships currently fighting.
 NAVAL_COMBAT_DEFENDER_ACTUAL_PARTICIPANT코0=Defender side ( $COUNTRY|Y$ ) has $COUNT|Y$ ships currently fighting.
@@ -129,8 +131,8 @@ COMBAT_DEFENDER_WINNING코0=§YThe defender is winning.§!
 NAVAL_INVASION_COMBAT_PROGRESS_DESC코0=This unit is performing a naval invasion. Its attack is reduced and its defense is improved by the transport's armor.
 NAVAL_INVASION_PROGRESS코0=Naval invasion progress: $VALUE|Y0%$
 NAVAL_INVASION_PROGRESS_COMPLETE코0=Naval invasion progress: $VALUE|Y0%$\n(All men have reached the shore).\n
-NAVAL_INVASION_ATTACK_SCALE코0=Total attack ability: $VALUE|Y=+0%$
-NAVAL_INVASION_DEFEND_SCALE코0=Total defense ability: $VALUE|Y=+0%$
+NAVAL_INVASION_ATTACK_SCALE코0=Total attack ability: $VALUE|=+0%$
+NAVAL_INVASION_DEFEND_SCALE코0=Total defense ability: $VALUE|=+0%$
 PHASE_DEFAULT코0=Default
 IS_ATTACKER코0=Offensive Tactic
 IS_NOT_ATTACKER코0=Defensive Tactic
@@ -246,7 +248,7 @@ COMBAT_LOG_COMBATS_WON_FACTOR코0=Win Ratio: $RATIO$
 COMBAT_LOG_COMBATS_ALL코0=All combat: $TOT|H$
 COMBAT_LOG_COMBATS_WON코0=§HWin Ratio§!
 COMBAT_LOG_COMBATS_WON_DETAILED_DESC코0=Combat won: $WON|H$\nCombat total: $TOTAL|H$
-COMBAT_LOG_COMBATS_TOTAL코0=§Hcombat§!
+COMBAT_LOG_COMBATS_TOTAL코0=§HCombat§!
 COMBAT_LOG_COMBATS_WON_RATIO코0=$RATIO|H%0$
 COMBAT_LOG_FILTER_BTN코0=Detailed list
 COMBAT_LOG_TAB_COMBAT코0=Combat
@@ -338,3 +340,6 @@ SCREENING_BOX_TOOLTIP코0=The §YScreening Group§! holds all the screening ship
 CAPITAL_BOX_TOOLTIP코0=The §YBattleline§! provides the main direct firepower of the fleet, usually in the form of Battleships and Heavy Cruisers. They will also prevent enemy capital ships from firing at friendly §YCarriers§!.
 CARRIER_BOX_TOOLTIP코1=The §YCarrier Group§! provides the main long range striking power of the fleet. Screened from the enemy by both the §YScreening Group§! and the §YBattleline§!, the carriers can launch strikes on the enemy without interference. Should any §YConvoys§! be present in the battle, they will also appear in this area.
 SUBMARINE_BOX_TOOLTIP코0=The §YSubmarine Wolfpack§! will attempt to finish off fleeing ships with its torpedoes while remaining hidden. A lack of dedicated anti-submarine vessels amongst the enemy will allow the submarines to slip away undetected.
+NAVAL_READY_TO_FIRE코0=Not ready to attack
+NAVAL_READY_TO_FIRE_DESC코0=Due to the ranges involved some ship classes will not be able to attack directly when combat is joined.
+
