--- a/constructions_l_english.properties
+++ b/constructions_l_english.properties
@@ -1,4 +1,4 @@
-CONSTRUCTION_VIEW_LABLE코0=Construction
+﻿CONSTRUCTION_VIEW_LABLE코0=Construction
 CONSTRUCTION_LOCATION_LABEL코0=Location
 CONSTRUCTION_LOCATION_DESC코0=The target location of each construction
 CONSTRUCTION_TASK_LABEL코0=Task
@@ -52,8 +52,8 @@ CONSTRUCTION_MAPMODE_CONVERT_PROVINCE_TOOLTIP코0=Click on a Civilian Factory or
 CONSTRUCTION_CONVERT_IC_TOOLTIP코0=§YConvert§!\nConvert Civilian Factory to Military Factory and vice versa
 CONSTRUCTION_CONVERT_IC_TOOLTIP_DELAYED코0=§GClick to select this mode and then click on buttons in each State to convert.§!
 CONSTRUCTION_FACTORIES_LABEL코0=#
-CONSTRUCTION_FACTORIES_AMOUNT코0=Amount of Factories
-CONSTRUCTION_FACTORIES_DESC코0=The number of factories used for each specific construction
+CONSTRUCTION_FACTORIES_AMOUNT코1=Number of Civilian Factories
+CONSTRUCTION_FACTORIES_DESC코1=The number of Civilian Factories used for each specific construction
 CONSTRUCTION_FACTORIES_CONSUMER_GOODS코0=Consumer Goods: $VALUE|R$
 CONSTRUCTION_FACTORIES_CONSTRUCTIONS코0=Construction: $VALUE|R$
 CONSTRUCTION_FACTORIES_TRADE코0=From imports: $VALUE|R$
