--- a/country_l_english.properties
+++ b/country_l_english.properties
@@ -1,20 +1,20 @@
-NATIONAL_UNITY코0=National Unity
+﻿NATIONAL_UNITY코0=National Unity
 STABILITY코0=Stability
 WAR_SUPPORT코0=War Support
 NATIONAL_UNITY_DESC코0=National Unity represents the willingness of the people at the top to prosecute a war to the finish. The higher this value is, the longer they will fight on before considering surrender.
 STABILITY_DESC코0=Stability represents the people's support for the current government. High stability makes political changes easier to push through and helps the economy run smoothly.
 WAR_SUPPORT_DESC코0=War Support represents the willingness of the people to prosecute a war to the finish. Enacting many Laws and preparing your nation for going to war effectively requires high War Support.
-STABILITY_WAR_FACTOR코0=At war: $VALUE|+2%H$
-STABILITY_POPULARITY_FACTOR코0=Ruling party popularity: $VALUE|=+2%H$
+STABILITY_WAR_FACTOR코0=At war: $VALUE|+2%$
+STABILITY_POPULARITY_FACTOR코0=Ruling party popularity: $VALUE|=+2%$
 STABILITY_EFFECT_TITLE코0=\n§HEffects from our current Stability:§!\n
 WAR_SUPPORT_EFFECT_TITLE코0=\n§HEffects from our current War Support:§!\n
-WAR_SUPPORT_AT_OFFENSIVE_WAR코0=Offensive war: $VALUE|+=2%H$
-WAR_SUPPORT_AT_DEFENSIVE_WAR코0=Defensive war: $VALUE|+=2%H$
-WAR_SUPPORT_TENSION코0=World Tension: $VALUE|+=2%H$
-WAR_SUPPORT_BEING_BOMBED코0=Enemy bombing: $VALUE|+=2%H$
-WAR_SUPPORT_INTERCEPTION코0=Interception: $VALUE|+=2%H$
-WAR_SUPPORT_HEROES_BEING_KILLED코0=War Heroes Being Killed: $VALUE|+=2%H$
-WAR_SUPPORT_CONVOYS_BEING_RAIDED코0=Trade Convoys Being Raided: $VALUE|+=2%H$
+WAR_SUPPORT_AT_OFFENSIVE_WAR코0=Offensive war: $VALUE|+=2%$
+WAR_SUPPORT_AT_DEFENSIVE_WAR코0=Defensive war: $VALUE|+=2%$
+WAR_SUPPORT_TENSION코0=World Tension: $VALUE|+=2%$
+WAR_SUPPORT_BEING_BOMBED코0=Enemy bombing: $VALUE|+=2%$
+WAR_SUPPORT_INTERCEPTION코0=Interception: $VALUE|+=2%$
+WAR_SUPPORT_HEROES_BEING_KILLED코0=War Heroes Being Killed: $VALUE|+=2%$
+WAR_SUPPORT_CONVOYS_BEING_RAIDED코0=Trade Convoys Being Raided: $VALUE|+=2%$
 POLITICAL_POWER코0=Political Power
 POLITICAL_POWER_DESC코0=How much Political Power the leaders of this country have.
 MANPOWER코0=Manpower
@@ -25,7 +25,7 @@ EXILE_COUNTRY_NORMAL_MANPOWER_DAILY_GROWTH코0=\n    Daily gain from §HLegitima
 MANPOWER_TOTAL코0=Total Manpower: $MAX|0H*$
 MANPOWER_USAGE코1=Free Manpower: $FREE|^2H$$EXILE$\nUsed Manpower:\nArmy: $ARMY|^2H$\n    - In the Field: $FIELD|^2H$\n    - In Training: $TRAINING|^2H$\nAir: $AIR|^2H$\nNavy: $NAVAL|^2H$
 MANPOWER_CURRENT코0=Total Manpower: $TOTAL|^2H$\n$PERC|2%H$ of Eligible Core Population available ($ELIGIBLE|^H$)
-MANPOWER_CURRENT_MOBILIZATION코0=Total Manpower: $TOTAL|^2H$\n$PERC|2%H$ (about $MOB|+3H%$ is mobilizing per day) of Eligible Core Population available ($ELIGIBLE|^H$)
+MANPOWER_CURRENT_MOBILIZATION코0=Total Manpower: $TOTAL|^2H$\n$PERC|2%H$ (about $MOB|+3%$ is mobilizing per day) of Eligible Core Population available ($ELIGIBLE|^H$)
 MANPOWER_NON_CORE코0=$NC_PERC|3%H$ of Eligible Non-Core Population available ($NC_ELIGIBLE|^H$)
 MANPOWER_GROWTH코0=§YMonthly growth in states§!\nRecruitable: $RECRUITABLE|^G$\nCivilian: $CIVILIAN|^G$
 MANPOWER_VALUE코3=$USAGE$\n\n$CURRENT$\n$GROWTH$
