--- a/effects_l_english.properties
+++ b/effects_l_english.properties
@@ -1,4 +1,4 @@
-EFFECT_LIST_OTHERS코0=$LIST$ and $NUMBER|Y$ others
+﻿EFFECT_LIST_OTHERS코0=$LIST$ and $NUMBER|Y$ others
 EFFECT_LIST_COUNTRY코1=@$TAG$$COUNTRY|UH$
 EFFECT_TRANSFER_STATE코0=Becomes owner and controller of $STATE|Y$.
 EFFECT_SET_STATE_OWNER코0=Becomes owner of $STATE|Y$.
@@ -73,7 +73,7 @@ POLITICS_ADD_FUEL코0=Fuel: $VAL|=+0$.
 EFFECT_TECH_BONUS_USES코0=§Y$USES$x§! 
 EFFECT_SOUND_DESC코0=Play $SOUND_NAME$.
 EFFECT_SCOPED_SOUND_DESC코0=Play $SOUND_NAME$ for $COUNTRY|H$.
-EFFECT_ADD_TECH_BONUS_AHEAD_ONLY코1=$USES$$AHEAD|%0G$ years of ahead of time penalty reduction for: $LIST|Y$.
+EFFECT_ADD_TECH_BONUS_AHEAD_ONLY코2=$USES$$AHEAD|G.1$ years of ahead of time penalty reduction for: $LIST|Y$.
 EFFECT_ADD_TECH_BONUS_BONUS_ONLY코0=$USES$$BONUS|%0+$ Research bonus for: $LIST|Y$.
 EFFECT_ADD_TECH_BONUS코1=Reduce ahead of time penalty by $AHEAD|.1G$ years and give a $BONUS|%0+$ research bonus. Valid for the next $USES|H$ researches of these technologies: $LIST|H$.
 EFFECT_DEMILITARIZED_ZONE코0=Becomes a demilitarized zone.
@@ -145,6 +145,7 @@ EFFECT_SET_POLITICS_RULING_PARTY코0=$PARTY|Y$ becomes the ruling party.
 EFFECT_SET_POLITICS_ELECTIONS코0=Public elections will be held.
 EFFECT_SET_POLITICS_NO_ELECTIONS코0=Public elections will not be held.
 EFFECT_SET_POLITICS_ELECTION_FREQUENCY코0=Elections will take place every $MONTHS|H$ years.
+EFFECT_SET_POPULARITIES코0=Party Popularities will change:
 EFFECT_ADD_EXTRA_STATE_SHARED_BUILDING_SLOTS코0=Add $COUNT|G$ Building Slots.
 EFFECT_REMOVE_EXTRA_STATE_SHARED_BUILDING_SLOTS코0=Remove $COUNT|R$ Building Slots.
 EFFECT_ADD_TO_WAR코0=Joins $COUNTRY1|Y$ in their war against $COUNTRY2|Y$.\n
@@ -164,7 +165,7 @@ EFFECT_REMOVE_COUNTRY_FROM_TECH_SHARING_GROUP코0=@$TAG$$COUNTRY|H$ leaves $GROU
 EFFECT_MODIFY_COUNTRY_TECH_SHARING_BONUS코0=$BONUS|+%0$ Technology Sharing bonus from $GROUPNAME|Y$.
 EFFECT_CREATE_UNIT코0=Create unit
 EFFECT_SET_COSMETIC_TAG코1=$COUNTRY|UH$ will be known as $COSMETIC_NAME|H$
-EFFECT_CREATE_UNIT_LOCATION코0=Create $OWNER|H$ unit in $STATE|H$
+EFFECT_CREATE_UNIT_LOCATION코0=Create $OWNER|H$ unit in $STATE|H$\n
 EFFECT_AUTONOMY_FREE코1=$COUNTRY|UY$ becomes free.
 EFFECT_SET_STATE_CATEGORY코1=Category of the state changes to $CATEGORY|Y$-type.
 EFFECT_ADD_STATE_MODIFIER코0=Add the following: $MODIFIERS$
