--- a/game_rules_l_english.properties
+++ b/game_rules_l_english.properties
@@ -1,4 +1,4 @@
-RULE_OPTION_YES코0=Yes
+﻿RULE_OPTION_YES코0=Yes
 RULE_OPTION_NO코0=No
 RULE_GROUP_COUNTRY_SPECIFIC코0=Country-Specific Gameplay Rules
 RULE_GROUP_GENERAL_FOREIGN_POLICY코0=Foreign Policy
@@ -35,7 +35,7 @@ RULE_ALLOW_RELEASE_NATIONS_FREE_DESC코0=Countries may always release nations un
 RULE_OPTION_PEACE_ONLY코0=Only While at Peace
 RULE_ALLOW_RELEASE_NATIONS_PEACE_ONLY_DESC코0=Countries may only release nations while at peace.
 RULE_ALLOW_RELEASE_NATIONS_BLOCKED_DESC코0=Countries can never release nations.
-RULE_ALLOW_RELEASE_NATIONS_NOT_BRITAIN_TOOLTIP코0=§Y{ENG.GetName}§! may only release this country via the §YDecolonization§! branch in the §YFocus Tree§!.
+RULE_ALLOW_RELEASE_NATIONS_NOT_BRITAIN_TOOLTIP코0=§Y[ENG.GetName]§! may only release this country via the §YDecolonization§! branch in the §YFocus Tree§!.
 RULE_ALLOW_RELEASE_NATIONS_PEACE_ONLY_TOOLTIP코0=Game Rule: §RCountries may only release nations while at peace.§!
 RULE_ALLOW_RELEASE_NATIONS_BLOCKED_TOOLTIP코0=Game Rule: §RCountries can never release nations.§!
 RULE_ALLOW_LICENSING코0=Production Licenses
