--- a/government_in_exile_l_english.properties
+++ b/government_in_exile_l_english.properties
@@ -1,4 +1,4 @@
-GOVERNMENT_IN_EXILE_LEGITIMACY코0=Legitimacy: $VALUE|H$
+﻿GOVERNMENT_IN_EXILE_LEGITIMACY코0=Legitimacy: $VALUE|H$
 SHOW_EXILES_DESC코0=Open Governments in Exile view
 SHOW_OWN_EXILE_STATUS코0=Show our Exile Government status
 SHOW_EXILES_DISABLED_DESC코0=§RWe don't have any Governments in Exile to display§!
@@ -34,8 +34,8 @@ GIE_REINSTATE_DISABLED_CAPITULATED코0=You cannot reinstate the $NAMEADJ$ goverm
 GIE_REINSTATE_ENABLED코0=Click to reinstate the $NAMEADJ$ goverment.
 GIE_REINSTATE_ENABLED_LIBERATED코0=$NAMEDEF|H$ has been fully liberated and their §HLegitimacy§! will be reduced by $VALUE|H2$ daily. If §HLegitimacy§! reaches §H0§!, the goverment is automatically reinstated.
 GIE_REINSTATE_EFFECT_DESC코0=By reinstating the government all $NAMEADJ$ §HExiled Divisions§!, §HArmy Leaders§! and §HShips§! will be transfered back to $NAMEDEF|H$. We will no longer be able to use their §HExiled Veteran Manpower§! for §HExiled Air Wings§! and the planes will be returned to storage.
-GIE_LEGITIMACY_DAILY_LIBERATED코0=Fully Liberated Exile: $VALUE|2H+$
-GIE_LEGITIMACY_DAILY_TOTAL코0=Total Daily Legitimacy Change: $VALUE|2H+$
+GIE_LEGITIMACY_DAILY_LIBERATED코0=Fully Liberated Exile: $VALUE|2+$
+GIE_LEGITIMACY_DAILY_TOTAL코0=Total Daily Legitimacy Change: $VALUE|2+$
 GIE_REINSTATE_ENABLED_EXILE_VIEWING코0=$NAMEDEF|UH$ can reinstate our government.
 GIE_REINSTATE_ENABLED_EXILE_VIEWING_LIBERATED코0=Our country has been fully liberated. §HLegitimacy§! will be reduced by $VALUE|H2$ daily. If §HLegitimacy§! reaches §H0§!, our goverment is automatically reinstated.
 GIE_REINSTATE_DISABLED_EXILE_VIEWING코0=$NAMEDEF|UH$ cannot reinstate our government as long as we are capitulated.
