--- a/multiplayer_l_english.properties
+++ b/multiplayer_l_english.properties
@@ -1,4 +1,4 @@
-MULTIPLAYER_LOBBY코0=Multiplayer Lobby
+﻿MULTIPLAYER_LOBBY코0=Multiplayer Lobby
 START코0=Start
 ABANDON_GAME코0=Abandon Game
 SERVER_IS_UP코0=§GServer is up.§!
@@ -110,7 +110,7 @@ OOS_46코0=AI Countries
 OOS_47코0=Orders Groups
 OOS_48코0=Armies in combat
 OOS_49코0=Completed focuses
-OOS_50코0=Naval mission coverage
+OOS_50코1=Country Fuel Stockpiles
 OOS_51코0=Regions in naval missions
 OOS_52코0=Command Power
 OOS_53코0=Allocated Command Power
@@ -121,7 +121,7 @@ OOS_57코0=Number of Naval Leaders
 OOS_58코0=Number of convoys used
 OOS_59코0=Number of free convoys
 OOS_60코0=Army Strength and Organization
-OOS_61코0=Country Fuel Stockpiles
+OOS_61코1=Technology Status
 MULTIPLAYER_PLAYERS코0=$NUM$
 MULTIPLAYER_MESSAGES코0=$NUM$
 MATCHMAKING_FRIEND_STATUS_PLAYING_THIS코0=§GAlready Playing§!
@@ -143,3 +143,5 @@ PLAYER_REMOVED_TITLE코0=$PLAYER$ has left
 PLAYER_REMOVED_DESC코0=$PLAYER|Y$ has unfortunately left the game.\nDo you want $COUNTRY|Y$ to become AI controlled?
 MULTIPLAYER_RESYC코1=Resync
 FAILED_TO_CONNECT코0=Failed to connect
+RADIO_TITLE코0=Stations
+
