--- a/musicplayer_l_english.properties
+++ b/musicplayer_l_english.properties
@@ -1,9 +1,10 @@
-MUSICPLAYER_PREV코0=Previous
+﻿MUSICPLAYER_PREV코0=Previous
 MUSICPLAYER_PLAY코0=Play
 MUSICPLAYER_PAUSE코0=Pause
 MUSICPLAYER_STOP코0=Stop
 MUSICPLAYER_NEXT코0=Next
 MUSICPLAYER_SHUFFLE_ON코0=Shuffle
+MUSICPLAYER_SHUFFLE_OFF코0=No Shuffle
 MUSICPLAYER_SHUFFLE_USER_FUNCTION코0=Weighted shuffle
 MUSICPLAYER_TIME_MIN_SEC코1=$MIN$:$SEC$
 MUSICPLAYER_OPEN_PLAYER코0=Open musicplayer
@@ -18,3 +19,11 @@ MUSICPLAYER_INCREASE_VOL코0=Increase volume
 MUSICPLAYER_DECREASE_VOL코0=Decrease volume
 MUSICPLAYER_ADJUST_VOL코0=Adjust volume
 MUSICPLAYER_SAVE코0=Save
+MUSICPLAYER_SELECT_STATION코0=Select station: $MUSIC_STATION|H$
+MUSICPLAYER_DESELECT_STATION코0=Deselect station: $MUSIC_STATION|H$
+base_music_TITLE코0=Default Soundtrack
+classic_TITLE코0=Classics
+axis_TITLE코0=Axis
+allies_TITLE코0=Allies
+comintern_TITLE코0=Comintern
+sabaton_TITLE코0=Sabaton
