--- a/parties_l_english.properties
+++ b/parties_l_english.properties
@@ -1,4 +1,4 @@
-communism코0=Communist
+﻿communism코0=Communist
 communism_noun코0=Communism
 democratic코0=Democratic
 democratic_noun코0=Democracy
@@ -61,6 +61,8 @@ ENG_democratic_party코0=Conservative Party
 ENG_fascism_party코0=British Union of Fascists
 ENG_neutrality_party_kings_party코0=King's Party
 ENG_neutrality_party_kings_party_long코0=The King's Party
+ENG_neutrality_party_queens_party코0=Queen's Party
+ENG_neutrality_party_queens_party_long코0=The Queen's Party
 ITA_communism_party코0=Partito Comunista Italiano
 ITA_democratic_party코0=Partito Popolare Italiano
 ITA_fascism_party코0=Partito Nazionale Fascista
@@ -119,6 +121,10 @@ GRE_fascism_party_long코0=Ethniki Enosis Ellados
 LIT_neutrality_party코0=LTS
 LIT_neutrality_party_long코0=Lietuviu Tautininku Sajunga
 LIT_fascism_party코0=Geležinis Vilkas
+LIT_democratic_party코0=LKDP
+LIT_democratic_party_long코0=Lietuvos krikščionių demokratų partijas
+LIT_communism_party코0=LKP
+LIT_communism_party_long코0=Lietuvos komunistų partija
 LAT_neutrality_party코0=Tautas Padome
 LAT_fascism_party코0=Pērkonkrusts
 LAT_democratic_party코0=LSDSP
@@ -128,6 +134,10 @@ LAT_communism_party_long코0=Latvijas Komunistiskā partija
 EST_neutrality_party코0=Isamaaliit
 EST_democratic_party코0=RKE
 EST_democratic_party_long코0=Rahvuslik Keskerakond
+EST_fascism_party코0=Vapsid
+EST_fascism_party_long코0=Eesti Vabadussõjalaste Liit
+EST_communism_party코0=EKP
+EST_communism_party_long코0=Eestimaa Kommunistlik Partei
 IRQ_neutrality_party코0=Monarchists
 IRQ_fascism_party코0=Golden Square
 IRQ_communism_party코0=Al-Hizb al-Shiu'iy
@@ -139,8 +149,8 @@ SWE_democratic_party코0=SAP
 SWE_democratic_party_long코0=Sveriges socialdemokratiska arbetareparti
 SWE_neutrality_party코0=Bondeförbundet
 SWE_neutrality_party_long코0=Bondeförbundet
-FIN_neutrality_party코0=Kesk
-FIN_neutrality_party_long코0=Suomen Keskusta
+FIN_neutrality_party코1=ML
+FIN_neutrality_party_long코1=Maalaisliitto
 FIN_democratic_party코0=SDP
 FIN_democratic_party_long코0=Suomen Sosialidemokraattinen Puolue
 FIN_fascism_party코0=IKL
@@ -241,8 +251,8 @@ SER_neutrality_party_long코0=Royalists
 BUL_neutrality_party코0=Tsar Boris loyalists
 BUL_communism_party코0=BCP
 BUL_communism_party_long코0=Bulgarian Communist Party
-BUL_democratic_party코0=UPPP
-BUL_democratic_party_long코0=United People's Progressive Party
+BUL_democratic_party코1=BZNS
+BUL_democratic_party_long코1=Bulgarski Zemedelski Naroden Sayuz
 BUL_fascism_party코0=UBNL
 BUL_fascism_party_long코0=The Union of Bulgarian National Legions
 SAF_neutrality_party코0=ANC
@@ -314,6 +324,8 @@ CZE_communism_party코0=KSC
 CZE_communism_party_long코0=Komunistická strana Ceskoslovenska
 CZE_democratic_party코0=CSNS
 CZE_democratic_party_long코0=Ceská strana národne sociální
+CZE_fascism_party코0=NOF
+CZE_fascism_party_long코0=Národní obec fašistická
 CHL_fascism_party코0=VPS
 CHL_fascism_party_long코0=Vanguardia Popular Socialista
 CHL_democratic_party코0=Partido Liberal
@@ -323,6 +335,12 @@ ETH_neutrality_party코0=Solomonic Dynasty
 ETH_democratic_party코0=Woyane rebellion
 ALB_neutrality_party코0=House of Zogu
 ALB_neutrality_party_long코0=House of Zogu
+ALB_fascism_party코0=PFSh
+ALB_fascism_party_long코0=Partia Fashiste e Shqipërisë
+ALB_democratic_party코0=Pavarur
+ALB_democratic_party_long코0=Pavarur
+ALB_communism_party코0=PPSH
+ALB_communism_party_long코0=Partia e Punës e Shqipërisë
 BOL_democratic_party코0=PL
 BOL_democratic_party_long코0=Partido Liberal
 BOL_fascism_party코0=FSB
@@ -370,6 +388,8 @@ AFG_neutrality_party_long코0=Barakzai royal family
 LUX_democratic_party코0=Rietspartei
 LUX_communism_party코0=KPL
 LUX_communism_party_long코0=Kommunistesch Partei Lëtzebuerg
+LUX_fascism_party코0=PNI
+LUX_fascism_party_long코0=Onofhängeg Nationalpartei
 BHU_neutrality_party코0=Wangchuk Dynasty
 SLO_fascism_party코0=HSLS
 SLO_fascism_party_long코0=Hlinkova Slovenská Ludová Strana
@@ -422,10 +442,12 @@ KOR_democratic_party코0=Liberal Party
 KOR_neutrality_party코0=Yi Dynasty
 KOR_fascism_party코0=NDPC
 KOR_fascism_party_long코0=National Defense Policy Committee
-ICE_democratic_party코0=Progress Party
-ICE_communism_party코0=People's Unity Party
-ICE_fascism_party코0=Nationalist Party
-ICE_neutrality_party코0=Independence Party
+ICE_democratic_party코1=Framsóknarflokkurinn
+ICE_communism_party코1=Kommúnistaflokkur
+ICE_communism_party_long코0=Kommúnistaflokkur Íslands
+ICE_fascism_party코1=Þjóðernissinna
+ICE_fascism_party_long코0=Flokkur Þjóðernissinna
+ICE_neutrality_party코1=Heimastjórnarflokkurinn
 SYR_fascism_party코0=SSNP
 SYR_fascism_party_long코0=Syrian Social Nationalist Party
 SYR_communism_party코0=Syrian Communist Party
