--- a/tactics_l_english.properties
+++ b/tactics_l_english.properties
@@ -1,4 +1,4 @@
-TACTIC_ATTACKER코0= (Attacker)
+﻿TACTIC_ATTACKER코0= (Attacker)
 TACTIC_DEFENDER코0= (Defender)
 TACTIC_DESC코0=Each side's leader will pick a tactic for the battle that will affect how it unfolds. A leader with higher skill or more advanced reconnaissance has a higher chance of picking a counter tactic that negates their opponent's.
 tactic_basic_attack코0=Attack
