--- a/topbar_l_english.properties
+++ b/topbar_l_english.properties
@@ -1,4 +1,4 @@
-TOPBAR_DEPLOYMENT코0=Recruit & Deploy
+﻿TOPBAR_DEPLOYMENT코0=Recruit & Deploy
 TOPBAR_DEPLOYMENT_DESC코0=Set up divisions and templates, and deploy troops to the map.
 TOPBAR_POLITICS코0=Politics
 TOPBAR_POLITICS_DESC코0=Manage your country's internal politics.
