--- a/trade_l_english.properties
+++ b/trade_l_english.properties
@@ -1,4 +1,4 @@
-TRADE_ALL_FACTORY_OUT_TITLE코0=All Factories for Trade
+﻿TRADE_ALL_FACTORY_OUT_TITLE코0=All Factories for Trade
 TRADE_ALL_FACTORY_OUT_DESC코0=Are you sure that you want to have all your factories producing trade goods?\n\nYou will not be able to construct any buildings!
 TRADE_FILTER_BY코0=Filter by: $KEY|H$
 TRADE_VALUE코0=$VALUE|Y0$
