--- a/unit_l_english.properties
+++ b/unit_l_english.properties
@@ -1,4 +1,4 @@
-night코0=Night
+﻿night코0=Night
 fort코0=Fort
 river코0=River
 amphibious코0=Amphibious
@@ -18,7 +18,7 @@ UNIT_LEADER_SKILL코0=$SKILL|Y$
 UNIT_LEADER_PROMOTE_POPUP_TITLE코0=Promote Leader
 UNIT_LEADER_PROMOTE_POPUP_DESC코3=Are you sure you want to promote $LEADER$? After the promotion, $LEADER$ will temporarily §Rlose§! a skill level while adjusting to the responsibilities of the new rank.
 UNIT_LEADER_PROMOTE_POPUP_DESC_COST코1=It will cost $CP|2R$ £command_power to promote this leader.
-HOURLY_MORALE_REGAIN_BASE코0=Base: $VAL|=+G$\n
+HOURLY_MORALE_REGAIN_BASE코0=Base: $VAL|=+$\n
 ATTRITION코0=Attrition:
 ATTRITION_DESC코0=Chance of equipment loss every day
 ATTRITION_TOTAL코0=Total Attrition: $TOT|=-1%2$
@@ -87,6 +87,7 @@ OPEN_TASK_FORCE_COMPOSITION_EDITOR코0=Open the task force composition editor
 CANNOT_OPEN_TASK_FORCE_COMPOSITION_EDITOR_FOR_DETACHED_TASK_FORCES코0=§RCannot edit the composition of a detached task force§!
 TASK_FORCE_COMPOSITION_EDITOR_DESC코0=Allows you to set targets for the number of ships of each class you want to maintain in the task force.\nRequires §YAutomatic reinforcement§! to be enabled.
 TASK_FORCE_COMPOSITION_EDITOR_TITLE코0=Task force composition editor
+NAVAL_SUB_UNIT_DEF_SELECTION_WINDOW_TITLE코0=Select a ship class
 TASK_FORCE_COMPOSITION_NEW_TEMPLATE_NAME코0=New template
 TASK_FORCE_COMPOSITION_FROM_SELECTED코0=Set the template from the current composition of the task force
 SAVE_TASK_FORCE_COMPOSITION_TEMPLATE코0=Save the composition as $NAME$
@@ -98,12 +99,21 @@ APPLY_TASK_FORCE_COMPOSITION_AUTO_REINFORCE_ON코0=Automatic reinforcement will 
 APPLY_TASK_FORCE_COMPOSITION_EXCESS_TO_RESERVE코0=Excess ships above the reinforcement requests will return to the reserve fleet.
 TASK_FORCE_COMPOSITION_ANY_ROLE코0=This requirement will be satisfied by ships of this type assigned to any role.
 TASK_FORCE_COMPOSITION_ANY_ROLE_CLICK_TO_SELECT코0=§GClick§! to select a specific role for this requirement.
+TASK_FORCE_COMPOSITION_ADD_1코0=§GClick§! to add §Y+1§!
+TASK_FORCE_COMPOSITION_ADD_5코0=§GCtrl + Click§! to add §Y+5§!
+TASK_FORCE_COMPOSITION_ADD_10코0=§GShift + Click§! to add §Y+10§!
+TASK_FORCE_COMPOSITION_SUB_1코0=§GClick§! to subtract §Y1§!
+TASK_FORCE_COMPOSITION_SUB_5코0=§GCtrl + Click§! to subtract §Y5§!
+TASK_FORCE_COMPOSITION_SUB_10코0=§GShift + Click§! to subtract §Y10§!
 SHIP_IS_PRIDE_OF_FLEET코0=$NAME|H$ is assigned as §HPride of the Fleet§!
 SHIP_IS_PRIDE_OF_FLEET_DESC코0=§HPride of the Fleet§! receives various bonuses but its country will suffer §HWar Support§! if it is sunk.
 NAVY_CONTAINS_PRIDE_OF_FLEET코0=This navy contains §HPride of the Fleet§! §H($NAME$)§!
 NAVY_CONTAINS_PRIDE_OF_FLEET_WITHOUT_NAME코0=This navy contains §HPride of the Fleet§!
+FLEET_HAS_FUEL_INEFFICIENT_SHIP_FOR_MISSION코0=£mapicon_unit_invalid_orders  This fleet contains task forces operating at sub-optimal fuel efficiency
+TASK_FORCE_HAS_FUEL_INEFFICIENT_SHIP_FOR_MISSION코0=£mapicon_unit_invalid_orders  The following ship classes are not fuel efficient for the mission $MISSION|H$
 SPECIFIC_NAVY_CONTAINS_PRIDE_OF_FLEET코0=$NAVY_NAME|H$ contains §HPride of the Fleet§! §H($NAME$)§!
 DISBAND_PRIDE_OF_THE_FLEET_COST코1=Disbanding your §HPride of the Fleet§! §H($NAME$)§! will cost $COST|R$ £pol_power 
+
 SET_SHIP_PRIDE_OF_FLEET코0=§HAssign§! $NAME|H$ as §HPride of the Fleet§!
 REPLACE_SHIP_PRIDE_OF_FLEET코0=§RReassign§! $NAME|H$ as current §HPride of the Fleet§!
 SET_SHIP_PRIDE_OF_FLEET_DESC코0=You will receive following bonuses:\n$BONUS$\n\n
@@ -111,15 +121,20 @@ SET_SHIP_PRIDE_OF_FLEET_DESC_2_WITHOUT_EXISTING코0=You can only have one §HPri
 SET_SHIP_PRIDE_OF_FLEET_DESC_2_WITH_EXISTING코0=It will cost $COST|R$ £pol_power  replace current §HPride of the Fleet§! §H($OLD_NAME$)§!.
 UNSET_SHIP_PRIDE_OF_FLEET코0=§RUnassign§! $NAME|H$ as §HPride of the Fleet§!
 UNSET_SHIP_PRIDE_OF_FLEET_DESC코0=You will §RLose§! following bonuses:\n$BONUS$\n\nIt will cost $COST|R$ £pol_power  to unassign.
+
 PRIDE_OF_THE_FLEET_COUNTRY_BONUS코0=\n§HCountry Bonus:§!\n$BONUS$
 PRIDE_OF_THE_FLEET_SHIP_BONUS코0=\n§HShip Bonus:§!\n$BONUS$
 PRIDE_OF_THE_FLEET_TEMP_BONUS코0=\n§RPenalty when sunk (for $NUM$ days):§!\n$BONUS$
+
 SET_SHIP_PRIDE_OF_FLEET_POPUP코0=§HAssign Pride of the Fleet§!
 SET_SHIP_PRIDE_OF_FLEET_POPUP_DESC코0=Are you sure you want to §HAssign§! $NAME|H$ as §HPride of the Fleet§!?\n\nOnce assigned, it will cost $COST|R$ £pol_power  to unassign or replace §HPride of the Fleet§!. You will receive following bonuses:\n$BONUS$\n\n
+
 REPLACE_SHIP_PRIDE_OF_FLEET_POPUP코0=§HReplace as Pride of the Fleet§!
 REPLACE_SHIP_PRIDE_OF_FLEET_POPUP_DESC코0=Are you sure you want to §HAssign§! $NAME|H$ as §HPride of the Fleet§! and §RReplace§! $OLD_NAME|H$?\n\nIt will cost $COST|R$ £pol_power  to replace §HPride of the Fleet§!. You will receive following bonuses:\n$BONUS$\n\n
+
 UNSET_SHIP_PRIDE_OF_FLEET_POPUP코0=§HUnassign Pride of the Fleet§!
 UNSET_SHIP_PRIDE_OF_FLEET_POPUP_DESC코0=Are you sure you want to §RUnassign§! $NAME|H$ from §HPride of the Fleet§!?\n\nIt will cost $COST|R$ £pol_power  to unassign and you will §RLose§! following bonuses:\n$BONUS$
+
 NOT_ENOUGH_PP_TO_UNASSIGN코0=\n\n§RNot enough Political Power§!
 NOT_ENOUGH_PP_TO_DISBAND_POTF코0=\n\n§RNot enough Political Power to unassign §!§HPride of the Fleet§!
 SELECT_HOME_BASE코0=Select home base for selected fleets
@@ -137,14 +152,15 @@ TASK_FORCE_AUTO_REINFORCEMENT_DESC코0=When the §HAutomatic reinforcement§! of
 CLICK_TO_SELECT_FLEET코0=§GClick§! to select fleet $NAME|H$
 FLEET_NAMED코0=$NAME|H$
 TASK_FORCE_NAMED코0=$NAME|H$
-TASK_FORCE_MEMBER_OF_FLEET코0=Member of the fleet $FLEET|H|$
+TASK_FORCE_MEMBER_OF_FLEET코0=Member of the fleet $FLEET|H$
 TASK_FORCE_IS_RESERVE_FLEET코0=Reserve fleet
 RESERVE_FLEETS_FOR_THIS_THEATER코0=Reserve fleets for this theater
+RESERVE_FLEETS_FOR_THIS_THEATER_DESC코0=Ships that go out of production and do not have a specific §YDeploy target§! will automatically be assigned to reserve.\nShips in the reserve fleet will automatically move to reinforce task forces which have §YAutomatic reinforcement§! enabled and are not meeting their set requirements.\nLikewise, if a task force has more ships than its set requirements, some will detach and move to the closest port and to reserve.
 RESERVE_FLEET_NOT_REINFORCING코0=§RNot ready to issue reinforcements§!
 RESERVE_FLEET_COMPLETING_MOVE_ORDER코0=- §RIs moving§!
 RESERVE_FLEET_NEEDS_TO_BE_IN_NAVAL_BASE_TO_REINFORCE코0=- §RNeeds to be docked in a naval base§!
 TASK_FORCE_ASSIGNED_TO_MISSION코0=Mission: $MISSION|H$
-TASK_FORCE_ACTIVITY_DESC_DETACHED_MOVING_TO_REFIT코1=£going_to_refit  Detached and refitting in $FLAG$ $NAVAL_BASE|H$
+TASK_FORCE_ACTIVITY_DESC_DETACHED_MOVING_TO_REFIT코1=£going_to_refit  Detached and moving to refit in $FLAG$ $NAVAL_BASE|H$
 TASK_FORCE_ACTIVITY_DESC_DETACHED_REINFORCING코1=£merging  Merging with $TARGET|H$
 TASK_FORCE_ACTIVITY_DESC_DETACHED_REPAIRING코1=£going_to_repair  Detached and moving to repair in $FLAG$ $NAVAL_BASE|H$
 TASK_FORCE_ACTIVITY_DESC_DOCKED코0=£mapicon_port_strike_result_text  Docked in $FLAG$ $NAVAL_BASE|H$
@@ -165,6 +181,10 @@ TASK_FORCE_ACTIVITY_DESC_SPOTTING_ENEMY_TASK_FORCE코0=£spotting  $PROGRESS|H0$
 TASK_FORCE_ACTIVITY_DESC_SPOTTING_ENEMY_TRANSFER코0=£spotting  $PROGRESS|H0$§H%§! Locating a $FLAG$ §Hnaval transfer§! in $REGION|H$
 TASK_FORCE_ACTIVITY_DESC_SPOTTING_ENEMY_CONVOY코0=£spotting  $PROGRESS|H0$§H%§! Locating a $FLAG$ §Hconvoy§! in $REGION|H$
 TASK_FORCE_ACTIVITY_DESC_STRIKE_FORCE_INTERCEPTING코0=£going_to_combat  Intercepting $TARGET|H$
+TASK_FORCE_FLEET_INFORMATION_HEADER코0=§HFleet Information§!\nMaximum Speed: $SPEED|H$\nMaximum Range: $RANGE|H$\n
+TASK_FORCE_FLEET_INFORMATION_SLOWEST_SHIPS코0=\n§HSlowest Ships§!\n
+TASK_FORCE_FLEET_INFORMATION_SHORTEST_RANGES코0=\n§HShortest Ranges§!\n
+TASK_FORCE_FLEET_INFORMATION_DELAYED코0=To learn more about individual ship details, select a task force, then click on the ship details portrait.
 OTHER_SHIPS코0=Other Ships
 ALL_SHIPS코0=All Ships
 ALL_SAME_TYPE_SHIPS코0=All $TYPE$s
@@ -411,18 +431,19 @@ CAN_NOT_PARADROP_TEMPLATE코0=Divisions using this template §RCANNOT§! be para
 BATALION_CAN_BE_PARCHUTED코0=This battalion §GCAN§! be parachuted.
 BATALION_CAN_NOT_BE_PARCHUTED코0=This battalion §RCANNOT§! be parachuted.
 ESTIMATED_NAVAL_POWER코1=  Friendly ships with orders to engage: $US|0Y$\n  Enemy ships with orders to engage: $THEM|Y$
+ESTIMATED_NAVAL_POWER_SUPREMACY코0=  Friendly supremacy: $US|0Y$\n  Enemy supremacy: $THEM|Y$
 NAV_AIR_SUPERIORITY코1=  Our Air Superiority increases our ship amount impact by: $VALUE|%G=$
 NAV_MINES_EFFECT_ON_US코1=  Our Mine Coverage increases our ship amount impact by: $VALUE|%G=$
 NAV_MINES_EFFECT_ON_ENEMY코1=  Enemy Mine Coverage increases their ship amount impact by: $VALUE|%G=$
 NAV_ENEMY_AIR_SUPERIORITY코1=  Enemy Air Superiority increases their ship amount impact by: $VALUE|%=R$
 NAV_SUPREMACY_INTEL코1=§RWe know too little about this region!§!
 INTEL_EFFICIENCY코0=  Intel efficiency: $VAL|%+$
-NAVAL_INVASION_CAN_NOT_TRANSFER_THROUGH코1= - $NAME|Y$ - We only have $SUP|0%R$ Naval Superiority but require $NEEDED|0%Y$
-NAVAL_INVASION_CAN_NOT_TRANSFER_THROUGH_TITLE코0=§RInsufficient Naval Superiority in regions:§!\n
+NAVAL_INVASION_CAN_NOT_TRANSFER_THROUGH코1= - $NAME|Y$ - We only have $SUP|0%R$ Naval Supremacy but require $NEEDED|0%Y$
+NAVAL_INVASION_CAN_NOT_TRANSFER_THROUGH_TITLE코0=\n§RInsufficient Naval Supremacy in regions:§!\n
 NAVAL_INVASION_WE코0=We
 NAVAL_INVASION_CAN_NOT_TRANSFER_THROUGH_NO_INTEL코2=\n§R$WHO$ lack sufficient intel to dare sending an invasion through the regions:§!
-NAVAL_INVASION_CAN_NOT_TRANSFER_THROUGH_NO_INTEL_HINT코0=\n\n§RAssign more navies or airwings on missions, or cover the above areas with Radar.§!\n
-NAVAL_INVASION_CANT_TRANSFER코0=\nPerforming Naval Invasions requires Naval Supremacy along Areas in its path. This is gained by:\n - Air Superiority\n - Ships on Missions
+NAVAL_INVASION_CAN_NOT_TRANSFER_THROUGH_NO_INTEL_HINT코0=\n§RAssign more navies or airwings on missions, or cover the above areas with Radar.§!\n
+NAVAL_INVASION_CANT_TRANSFER코1=\nPerforming Naval Invasions requires Naval Supremacy along Areas in its path. This is gained by:\n - Air Superiority\n - Ships on Missions
 CLICK_TO_ASSIGN_COMMANDER코0=§GClick to assign a commander.§!
 NAVAL_INVASION_NOT_REACHED_START코0=§RSome divisions assigned to this invasion have not reached the start position yet.§!\n
 PARADROP_INVASION_CAN_NOT_TRANSFER코0=§RTo perform a Paradrop operation we must have more than $RATIO|0%H$ Air Superiority in next strategic regions: $LIST$§!
@@ -468,10 +489,10 @@ CREATE_FLEET_FROM_SELECTED_TASK_FORCES코0=§GClick§! to create a new fleet fro
 CANNOT_CREATE_FLEET_FROM_SELECTED_TASK_FORCES코0=§RCannot create a fleet with the current selection§!
 NUMBER_OF_ENEMY_SHIPS코0=Estimated number of enemy ships in region
 NUMBER_OF_ALLY_SHIPS코0=Number of friendly ships in region
-EFFECT_OF_OUR_AIR_SUPERIORITY_ON_NAVAL_SUPREMACY코0=Effect of our air superiority on our naval supremacy
-EFFECT_OF_ENEMY_AIR_SUPERIORITY_ON_NAVAL_SUPREMACY코0=Effect of enemy air superiority on their naval supremacy
-EFFECT_OF_OUR_MINES_ON_NAVAL_SUPREMACY코0=Effect of our mines on our naval supremacy
-EFFECT_OF_ENEMY_MINES_ON_NAVAL_SUPREMACY코0=Effect of enemy mines on their naval supremacy
+EFFECT_OF_OUR_AIR_SUPERIORITY_ON_NAVAL_SUPREMACY코0=Effect of our air superiority on our Naval Supremacy
+EFFECT_OF_ENEMY_AIR_SUPERIORITY_ON_NAVAL_SUPREMACY코0=Effect of enemy air superiority on their Naval Supremacy
+EFFECT_OF_OUR_MINES_ON_NAVAL_SUPREMACY코0=Effect of our mines on our Naval Supremacy
+EFFECT_OF_ENEMY_MINES_ON_NAVAL_SUPREMACY코0=Effect of enemy mines on their Naval Supremacy
 NO_NAVAL_SUPREMACY_INFO코0=There are no enemy or friendly ships in the region
 damaged_heavy_guns코1=Main Battery Turret Destroyed
 damaged_light_guns코1=Main Battery Mount Disabled
