--- a/waroverview_l_english.properties
+++ b/waroverview_l_english.properties
@@ -1,4 +1,4 @@
-PARTICIPANTS코0=Participants
+﻿PARTICIPANTS코0=Participants
 WARGOAL코0=Wargoal
 WARSCORE_TITLE코0=§HWar Participation§!\nA measure for how much of the war effort a nation has shouldered on the way to bringing the enemy to surrender. A high percentage lets you dictate more terms in the peace conference once the war ends.
 LOSSES코0=Losses
@@ -31,6 +31,7 @@ MAJOR_DEFENDERS코0=§TMajor Defenders§!
 PARTICIPANT코0=$COUNTRY|H$
 SURRENDER코2=§T$COUNTRY|H$ is $SURRENDER|H0%$ towards capitulation.\nIt controls $CONTROL|0%H$ of §HVictory Points§! and will capitulate when it has $VAL|0%H$ or less§!
 CAN_SURRENDER_FACTION_MEMBERS코1=They are currently fighting with their faction and will only surrender when all major factions members in this war has capitulated.\nMajor Faction members left to surrender:\n$MEMBER_LIST|Y$
+CAN_SURRENDER_SUBJECT코0=They are currently fighting with their overlord and will only surrender when this overlord has capitulated.\nOverlord: $OVERLORD|Y$
 CAN_SURRENDER코0=They are currently fighting alone and will surrender as soon as they have capitulated
 SURRENDER_GIE_LEGITIMACY코0=If they capitulate, they will become a §HGovernment in Exile§!. Their §HLegitimacy§! will be $LEGITIMACY|0Y$.
 CANNOT_SURRENDER_NOT_ENOUGH_DAYS코0=They have only been at war for $DAYS|Y$ days, they need to have been at war for atleast $MIN_DAYS|Y$ days before surrendering
@@ -38,8 +39,8 @@ ALLY_CALLED코0=§RYou've already called this ally§!
 NO_ALLIES_TO_CALL코0=§RYou can't call any allies§!
 ALLIES_NOT_IN_WAR코0=Allies not in war
 WARSCORE_PARTICIPATION코0=Has contributed about §Y$VALUE$%§! of the war effort.
-WARSCORE_BREAKDOWN_NOCASUALTIES코0=Breakdown:\nOccupation: $OCCUPATION|Y0$\nBombing: $BOMBING|Y0$ / $BOMBING_MAX|Y0$
-WARSCORE_BREAKDOWN코0=Breakdown:\nOccupation: $OCCUPATION|Y0$\nBombing: $BOMBING|Y0$ / $BOMBING_MAX|Y0$\nCasualties: $CASUALTIES|Y0$
+WARSCORE_BREAKDOWN_NOCASUALTIES코0=Breakdown:\nOccupation: $OCCUPATION|Y0$\nBombing: $BOMBING|Y0$ / $BOMBING_MAX|Y0$\nSunk Enemy Ships: $SUNK_SHIPS|Y0$
+WARSCORE_BREAKDOWN코0=Breakdown:\nOccupation: $OCCUPATION|Y0$\nBombing: $BOMBING|Y0$ / $BOMBING_MAX|Y0$\nSunk Enemy Ships: $SUNK_SHIPS|Y0$\nCasualties: $CASUALTIES|Y0$
 WAR_OVERVIEW_CAPITULATE_STATUS코0=They have capitulated and can no longer stop this side of the war from surrendering. To remove their capitulation status they must reclaim their capital and be at most $LEVEL|%Y0$ towards capitulation. They are currently at $CURRENT|%Y0$.
 WAR_OVERVIEW_AGGREGATE_VIEW_HEADER코0=War Summary
 WAR_OVERVIEW_CAPITULATION_PROGRESS코0=Capitulation Progress
